--- a/mds/知识小集03.md
+++ b/mds/知识小集03.md
@@ -463,7 +463,7 @@ class CusOperation:Operation{
     }
 }
 ```
-所以总结一下：NSOperation较与GCD，就是可以添加依赖、最大并发量、控制状态。
+所以总结一下：NSOperation较与GCD，就是可以添加依赖、最大并发量、控制状态。 GCD 基于NSOperation实现
 
 #### 二叉树:
 前序、中序、后序遍历指的是根节点的位置。
@@ -516,11 +516,101 @@ class CusOperation:Operation{
 
 
 
-FPS检测原理：
+FPS检测原理：CADisplayLink
 
-直播的流程和API
+直播的流程和API:
 
-音视频相关。
+
+
+音视频相关:
+
+
+
+
+
+#### 内存
+
+##### ARC & MRC
+
+MRC是手动内存管理，ARC是自动内存管理，它通过LLVM编译器和runtime协作在合适的时机给代码添加retain和release等代码，实现自动引用计数的管理。ARC无法显示调用retain和release等函数。
+
+##### 内存管理方案
+
+**TaggedPointer**：对于一些小对象，比如NSNumber和NSDate。它实际上采用的是TaggedPointer的管理方式进行内存管理的，它是对象指针实际上不执行任何内存地址，而是直接将值存储在了指针本身里，该指针就被拆分成两部分，一部分是直接保存数据，另一部分是作为特殊标记。
+**NONPOINTER_ISA**：在64位架构下，一个isa指针是由64位比特位组成。而实际上存储改对象所属类对象地址只需要用到大概33位，所以剩下的位数就可以用来存储其他的信息。比如第一位存储的是当前指针是否是一个纯isa指针，如果是0则表示是只存储了所属类对象的内存地址，如果是1则表示不是一个纯isa指针，也就是这里的非指针类型的ISA，那NONPOINTER_ISA第位2则存储了当前对象是否有关联对象，第3位表示是否是否使用ARC，接下来的33位表示所属对象的内存地址，接着是表示是否完成初始化的magic，之后1位表示该对象是否有弱引用指针，接着1位表示是否正在执行deallocing，再下1位则表示引用计数是否过大无法存储在isa指针，剩下的几位则用来存储实际的引用计数。也就是说当引用计数小于某个值(大概是10)的时候，并不需要使用外挂散列表存储引用计数相关信息，若超过了这个值，则需要使用。
+**散列表：SideTables**：它是由多个散列表组成的SideTables。每个散列表下包含了一个自旋锁、一个引用计数表、一个弱引用表。
+q1：为什么使用多个sidetable
+因为操作引用计数需要加锁，这样就存在效率问题，而分割成多个sidetable，就可以并行操作，提高访问效率。
+q2：怎么实现快速分流，也就是说如何快速定位到是属于哪一张sidetable？
+sidetable的本质是一个散列表，那么它就是通过对象指针作为key值，经过hash计算定位到相对的sidetable的，比如用过key值对sidetables的个数取余，这样就增加了访问效率，无需遍历。
+
+##### 内存数据结构
+
+**自旋锁**：它是一个“忙等”的锁，也就是说在当前资源被某个线程占用的时候，其他的线程会一直试探该锁有没有解锁，而像信号量，则是会在获取不到资源的时候进行休眠，等资源被释放后，则再被唤醒。
+**引用计数表**：引用计数表也是一个hash表，它是通过hash函数插入和获取引用计数，提高访问效率。hash表里的每个元素是一个unsigned long类型的size_t。它也是由64位比特位组成，其中第一位是表示是否有弱引用，第二位表示是否正在执行dealloc函数。剩下的则是表示引用计数的值，所以计数的时候需要位移2位，也就是加减4。
+**弱引用表**：实际上也是一个hash表，它存储的是一个weak_entry_t的结构体数组，它里面的每个对象存储的都是一个弱引用指针。
+
+##### 引用计数
+
+alloc ：
+q1:通过alloc生成的对象，其实并没有设置引用计数为1。但是获取它的引用计数的时候确实是1，为什么。
+retain：
+q1：我们在进行retain操作的时候，系统是怎么查找其对于的引用计数的呢？
+是经过两次hash查找，然后进行+1操作（实际上是位移操作）。
+release：
+同样是经过两次hash算法，获取到引用计数值，然后进行-1操作。
+retainCount：
+**查找引用计数时，会通过一个初始化为1的局部变量 ➕ 上面各方法中查找到的引用计数值。所以说上面说的isa或散列表等存储的引用计数值实际上就是引用计数的值减一**。而这也说明了为什么执行alloc操作时，没有设置引用计数，但是查找到的retainCount仍然为1的原因。
+dealloc:
+执行dealloc时，判断是否可以释放的条件包括：是否使用nonpointer_isa、是否有弱引用指针、是否有关联对象、是否使用ARC、是否使用sidetable。如果这些条件都为NO的时候，就可以直接使用c函数free直接释放，否则则要调用objc_dispose()进行进一步清理。
+而objc_dispose则会一步步 移除对关联对象、将指向该对象的弱引用指针置为nil，将当前对象在引用计数表的数据清除掉等操作。(这里解决了两个面试题:1、对象在释放的时候，是否有必要移除掉关联对象；2、weak修饰的对象是怎么讲指针置为nil的。答案就是在dealloc内部实现的时候有做这些操作)
+
+##### 弱引用  _ weak
+
+q1：系统是怎样把一个weak变量添加到它对应的弱引用表中的。
+一个被声明为 _ weak 的对象指针，经过编译器编译，会调用一个objc_initWeak函数，之后会调用weak_register_no_lock()函数进行弱引用变量的添加，具体添加的位置是通过hash算法进行位置查找的，如果查找的对应位置中已经有了当前对象对应的弱引用数组，则把当前变量添加进弱引用数组，如果没有，则重新创建一个弱引用数组。
+q2：当一个对象被释放之后，weak变量是怎么被清理的。
+会被置为nil。当对象执行dealloc的时候会调用弱引用清除相关函数，在函数内部会通过弱引用指针找到弱引用数组，然后遍历所有的弱引用指针，分别置为nil。
+
+##### 自动释放池
+
+AutoreleasePool的实现原理：
+AutoreleasePool为何可以嵌套使用：
+
+首先编译器会将@autoreleasepool{}括起来的代码改写成:
+
+```oc
+void * ctx = objc_autoreleasePoolPush();
+{}中的代码
+objc_autoreleasePoolPop(ctx);
+```
+
+objc_autoreleasePoolPush函数内部会调用AutoreleasePoolPage的push函数，objc_autoreleasePoolPop(ctx)也是调用AutoreleasePoolPage的pop(ctx)函数。一次pop操作是一次批量的pop操作，也就是在push的时候，会将{}函数体里的所有对象添加进自动释放池中，当执行pop操作的时候，则会给每一个对象发送一次release操作。所以说是一次批量操作。
+
+q1：什么是自动释放池？
+是以栈为节点通过双向链表的形式组合而成的，是和线程一一对应的。因为AutoreleasePoolPage的数据结构包含一个AutoreleasePoolPage类型的parent指针和一个AutoreleasePoolPage类型的child指针，同时还包含一个pthread和一个id指针。
+
+##### Block
+- 全局类型block：指没有用到任何外部变量，只用到全局变量、静态变量的block称作全局block，生命周期与应用程序等同。存放在已初始化数据区中；
+进行copy操作，等于什么都没做。
+- 栈类型上的block：只用到外部局部变量、成员属性变量，无强指针引用的block。
+放到栈里；进copy操作，copy的结果是在堆上产生了一个block
+- 堆上的block：有强指针引用或使用了copy关键字修饰的block。
+放到堆里；进copy操作，copy的结果是会增加其引用计数
+
+
+2、block截获变量是根据被截获变量的类型进行区分的：
+
+- 局部变量：基本数据类型、对象类型: 
+对于基本数据类型的局部变量只截获其值，对于对象类型的局部变量，连同所有权修饰符一起截获,也就是直接操作对象。
+- 局部静态变量：以指针形式进行截获。也就是说直接操作的指针，所以会被改变。
+- 全局变量：不截获！所以操作就是直接使用全局变量本身。
+- 全局静态变量：不截获！所以操作就是直接使用全局静态变量本身。
+
+3、如果我们声明一个对象的成员变量是一个block，然后在栈上创建block，同时赋值给成员变量。如果成员变量block没有使用copy关键字，而是使用assign，那么当栈函数内存被释放的时候，继续访问这个block就会导致崩溃。那如果使用了copy关键字，那么在堆上就会产生一个一模一样的block。那么在MRC下，此时堆上的block就没有被释放掉，导致内存泄露。而被copy关键字进行修饰后的block，无论在哪对block进行访问，其实都是通过 _ forwarding 指针访问的堆上的block。
+
+q:何时需要对block进行copy操作。
+所以说如果一个block成员变量在栈上进行创建的话，那么就应该进行copy操作，避免block跟随栈函数被释放。
 
 
 
