--- a/读书笔记/iOS高级面试/知识小集03.md
+++ b/读书笔记/iOS高级面试/知识小集03.md
@@ -227,8 +227,10 @@ DNS解析转发问题？
 Cookie主要是用来记录用户状态，区分用户；状态主要保存在客户端；
 Session也是主要用来记录用户状态，区分用户；状态主要存放在server端。
 
-
 ##### socket
+
+socket 是使用标准Unix文件描述符合其他程序进行通讯的方式，实际上是对TCP、UDP的一层接口封装！
+
 * socket与http：
 * socket 打洞：
 
