--- a/读书笔记/iOS高级面试/知识小集00.md
+++ b/读书笔记/iOS高级面试/知识小集00.md
@@ -49,16 +49,35 @@ KVO是OC观察者模式的实践之一。KVO的实现原理是通过Runtime的**
 
 ##### KVC
 KVC——KeyValueCoding键值编码。是苹果给NSObject添加的一个分类，它可以无需直接访问存Setter、取getter方法就能对属性进行操作(**所以这违反了面向对象的"封装性"的特性**)。主要的方法是setValueForKey:和valueForKey: 及KeyPath的变种。
+
 注意：
-* accessInstanceVariablesDirectly 设置为YES，则如果没有找到setKey，会按照 _ key， _ iskey，key，iskey的顺序搜索成员，设置成NO就不这样搜索。
+* valueForKey:的时候会先按照getKey:、key、isKey、 _ key的顺序查找方法，然后判断accessInstanceVariablesDirectly，走后续流程；
+* setValue:forKey：的时候先按照setKey:、 _ setKey:的顺序查找方法，然后判断accessInstanceVariablesDirectly，走后续流程；
+* accessInstanceVariablesDirectly 设置为YES，则如果没有找到setKey，会按照 _ key， _ iskey，key，iskey的顺序搜索成员变量，设置成NO就不这样搜索。
+* 如果传入的Value值为nil，则会调用setNilValueForKey方法；
+* 如果key不存在且没有搜索到和key有关的字段和属性，则会调用valueForUndefinedKey函数。
 
-https://juejin.im/entry/587d8b3e128fe1005701f969
-
-##### Associated关联对象
+  [KVC详解](https://juejin.im/entry/587d8b3e128fe1005701f969)
 
 ##### Category
+category的最直接的作用就是给已有类添加方法。其次还可以拆分单个文件、便于多人同时开发一个类、声明私有方法等。
+
+category是在runtime时决议的（所以category不能为类添加成员变量，因为运行时的类的内存布局已经确定了），category的结构体中包含名称、所属的类、方法列表、类方法列表、协议列表、属性列表。 
+
+category是在运行时方法objc_init添加进类当中的，根据运行时方法的查找顺序，所以如果一个类对应多个category，每个category对应着相同方法，则最后编译的category的方法应该是实际生效的。但是并不是所有的方法都会直接这样“覆盖”掉。如果每个类本身和category都实现了**+load**方法，则每个load方法都会执行,执行的顺序是先类后category。
+
+* 扩展： 扩展可以说是一个匿名的分类，但是它又不是分类，因为它是编译时决议的，生命周期随之宿主类，只有声明，没有实现，依附在宿主类中。主要的作用就是用来声明私有属性、私有方法、私有成员变量。不能为系统类添加扩展。
+
+##### Association关联对象
+在category中提到，不能为已有类添加成员变量，因为运行时类的内存布局已经确定了。但是可以添加属性。但其实属性 = setter+ getter + ivar。依然绕不过成员变量这个坎。所以关联对象的出现，正好解决了这个问题。
+
+在runtime源码中我们可以看到一个AssociationsManager单例，它负责维护一个静态变量AssociationHasMap。也就是说我们创建的每一个类的关联对象都放在这同一个容器中。这个map以key为键值，以其他三个参数组成的结构体为value进行赋值。这样正好解决了内存布局的问题。
 
 ##### 通知
+通知是使用观察者模式实现的，主要用于跨层传递消息。可以一对多进行传递。
+通知的底层实现应该和关联对象的实现方式类似。主要由通知中心NSNotificationCenter管理一个Map表。Map表的key值是notifIctionName，value是一个列表。列表中的每个元素就是观察者、参数、方法等参数。
+
+* 代理：使用代理模式实现的，使用一对一的传递方式！
 
 ##### 所有事件及手势：
 1、当触摸事件发生后，系统会将该事件添加进UIApplication管理的队列事件中；
@@ -654,6 +673,8 @@ AFURLSessionManager主要工作包括哪些？
 
   iOS默认会在UI主线程对图像进行解码。SDWebImageDecoder的优化思路就是将解码的耗时工作放到了子线程中进行，解码完成后就缓存到内存避免重复解码。
 
+  解码的主要函数：[UIImage decodedImageWithImage:img];
+
 * **离屏渲染**：
   在OpenGL中有两种渲染方式：当前屏幕内渲染和离屏渲染(在当前屏幕缓存区以外开辟一个新的缓存区进行渲染)。离屏渲染消耗性能的原因包括：
   1.需要创建新的缓存区；
@@ -681,6 +702,8 @@ AFURLSessionManager主要工作包括哪些？
 A *a = [[A alloc]init];
 [a setClass:[B class]];
 ```
+* **+load**：每个类和分类都有load方法，它是在类被引进项目的时候（在main函数开始执行之前）自动被调用的，并且都会被调用一边。
+与initialize的区别：initialize是在类或子类的第一个方法被调用前调用，也就是说没有使用的类不会被调用；如果类和分类都实现了initialize方法，则只有最后编译的category的initialize方法会被调用。
 * 
 
 
