整理完成OC语法特性相关知识点

--- a/读书笔记/iOS高级面试/知识小集00.md
+++ b/读书笔记/iOS高级面试/知识小集00.md
@@ -79,7 +79,10 @@ category是在运行时方法objc_init添加进类当中的，根据运行时方
 
 * 代理：使用代理模式实现的，使用一对一的传递方式！
 
-##### 所有事件及手势：
+#### Runtime
+
+
+#### 所有事件及手势：
 1、当触摸事件发生后，系统会将该事件添加进UIApplication管理的队列事件中；
 2、UIApplicatioA会从事件队列中取出该事件，并将事件分发给keywindow；
 3、然后keywindow会判断hitTestwithEvent来返回最终响应的视图，那在这个过程中会调用pointInsert判断点击事件是否在当前视图的范围内，如果在，则会倒序遍历子视图，来判断是否是该视图响应事件。注意在pointInsertEvent内，需要使用convertpoint：toView：来进行坐标系转换
