--- a/读书笔记/iOS高级面试/知识小集00.md
+++ b/读书笔记/iOS高级面试/知识小集00.md
@@ -77,9 +77,15 @@ category是在运行时方法objc_init添加进类当中的，根据运行时方
 通知是使用观察者模式实现的，主要用于跨层传递消息。可以一对多进行传递。
 通知的底层实现应该和关联对象的实现方式类似。主要由通知中心NSNotificationCenter管理一个Map表。Map表的key值是notifIctionName，value是一个列表。列表中的每个元素就是观察者、参数、方法等参数。
 
+注意：
+* 在多线程应用中，Notification在哪个线程中post，就在哪个线程中被转发。所以尽可能使用block API进行处理。其次要多注意它产生的循环引用的问题
+
 * 代理：使用代理模式实现的，使用一对一的传递方式！
 
 #### Runtime
+我们知道OC是在C语言基础之上开发的。编译的时候，OC无法直接编译为汇编语言，而是需要先转成C语言再进行编译。而从OC到C的过度就是由runtime实现的。所以可以说runtime是OC的运行环境，它是OC在C的基础上实现面向对象和动态机制的基石。
+
+
 
 
 #### 所有事件及手势：
