runtime基础数据结构整理

--- a/读书笔记/iOS高级面试/知识小集00.md
+++ b/读书笔记/iOS高级面试/知识小集00.md
@@ -85,6 +85,23 @@ category是在运行时方法objc_init添加进类当中的，根据运行时方
 #### Runtime
 我们知道OC是在C语言基础之上开发的。编译的时候，OC无法直接编译为汇编语言，而是需要先转成C语言再进行编译。而从OC到C的过度就是由runtime实现的。所以可以说runtime是OC的运行环境，它是OC在C的基础上实现面向对象和动态机制的基石。
 
+* 先来分析一下runtime的基础数据结构，从数据结构中了解OC的部分运行时特性：
+	OC中所有的对象都是id类型，而id类型对应到runtime中就是objc_object的结构体。objc_object包含：一个 isa指针、对isa操作相关的方法、包含弱引用相关的方法、包含关联对象相关的方法、内存管理相关的方法（retain、release等）。OC中所使用的Class对应runtime的objc_class的结构体，它是继承自objc_object（所以Class也是一个对象，是类对象），其次它含有一个superClass指针、cache_t的成员变量、class_data_bits_t的成员变量。cache_t里每一个元素是一个bucket_t的结构体。bucket_t有两个成员变量，一个是key，对应SEL，另一个是IMP。class_data_bits_t主要是对class_rw_t的封装。class_rw_t是主要对class_ro_t的封装，其次它还有一些protocols、properties、methods，这些都是二维数组，每一个元素表示一个分类的对应信息。class_ro_t包含name、ivars、protocols、properties、methods，这些数据都是只读信息，表示类本身的数据（所以说不能使用分类给类添加成员变量）。methods中每一个元素是一个Method_t的结构体，它包含的内容包括SEL、const char * (返回值和参数)、IMP。
+
+* 注意：
+	* isa指针分为指针型的isa指针，它的所有数据都所属类的地址。另一种是非指针型的isa，它只有部分内容用来存储所属类的地址。可以说含有isa指针的结构体都是对象，其中对象的isa指向类对象，类对象的isa指针指向元类，元类的isa指针指向根元类，根元类的isa指针指向它本身； 	
+	* 类对象的superClass指针指向父类对象，元类对象的superClass指针指向元类的父类，根元类的superClass指针指向NSObject，NSObject的superClass指针为nil；
+	* cache_t 是一个用于快速查找方法执行函数。它是一个可增量扩展的哈希表结构。是计算机局部性原理的应用；runtime通过key进行hash算法定位到对应的bucket_t，然后获取IMP。
+
+从上面的基础数据结构中，我们可以知道对象、类对象、元类对象直接的关系，以及isa指针、super指针的相关指向。而类对象主要存储了实例方法和数据，元类对象主要存储了类方法及数据。
+
+* 消息传递 objc_msgSend：
+* 消息转发：
+* Method-Swizzing：
+
+
+
+
 
 
 
