--- a/读书笔记/iOS高级面试/知识小集00.md
+++ b/读书笔记/iOS高级面试/知识小集00.md
@@ -111,7 +111,7 @@ category是在运行时方法objc_init添加进类当中的，根据运行时方
 
 	* Method-Swizzing：
 	方法交换是指使用runtime API : method_exchangeImplementations(Method m1, Method m2)来交换两个方法的实现。
-	其他：Category、KVO、KVC、ARC的原理和实习；
+	其他：Category、KVO、KVC、ARC等
 
 #### Runloop
 RunLoop是通过系统内部维护的事件循环来对事件和消息进行管理的对象。事件循环可以有效地对消息和事件进行管理：当有消息需要处理时，会将进程从内核态到用户态进行切换，同时唤醒当前线程处理消息；当没有消息需要处理时，会休眠当前线程，将进程从用户态到内核态进行切换，以避免资源占用。所以runloop可以保证进程不退出，可以处理和监听事件，可以定时渲染UI，可以调节CPU的工作。
@@ -144,7 +144,8 @@ CFRunLoopRef 里包含一个pthread、一个currentMode、一个modes、一个co
 Block是对函数及其执行上下文封装起来的对象。
 * 我们来看看block的基础数据结构：
 block包含了一个isa指针，一个函数指针，一个函数体。
-block分为NSGlobalBlock、NSMallocBlock、NSStackBlock。并且在ARC中有所区别。
+block分为NSGlobalBlock、NSMallocBlock、NSStackBlock。并且在ARC和MRC中有所区别。
+
 
 
 #### 内存管理
