--- a/读书笔记/iOS高级面试/知识小集00.md
+++ b/读书笔记/iOS高级面试/知识小集00.md
@@ -143,9 +143,54 @@ CFRunLoopRef 里包含一个pthread、一个currentMode、一个modes、一个co
 #### Block
 Block是对函数及其执行上下文封装起来的对象。
 * 我们来看看block的基础数据结构：
-block包含了一个isa指针，一个函数指针，一个函数体。
-block分为NSGlobalBlock、NSMallocBlock、NSStackBlock。并且在ARC和MRC中有所区别。
+Block最终被编译之后得到的是一个结构体，结构体内部成员变量有一个 _ _ block _ impl的结构体，它内部包含一个isa指针，一个FunPtr函数指针。所以说block是一个对象，block调用就是函数调用。
+* block的类型：block分为NSGlobalBlock、NSMallocBlock、NSStackBlock，它们分别存在在全局数据区、堆区、栈区。并且在**ARC和MRC中有所区别**：
+	* 首先无论是ARC和MRC下，只要是没有引用外部变量的block都是NSGlobalBlock，全局block对copy、retain、release没有反应；
+	* 其次引用了外部变量的block就变成了栈block。因为一旦使用到了外部变量，就可能因为截获变量而得管理相关内存，此时对栈block进行copy操作，那么就会拷贝到堆区；
+	* 栈block变为堆block，存在一些条件：在ARC下：（调用Block的copy方法、将block赋值给__strong修饰的类型或成员变量、block作为返回值时、使用GCD的block等）；在MRC下，（对栈block进行copy操作等）；
+* 注意 ：
+这里用代码解释一下block在ARC和MRC的区别：
+```
+void(^block) = ^{};   //没有对外部变量进行任何操作，所以是全局block
+int val = 0; 
+NSLog("%@",^{val = 1;}); //引用了外部变量，所以这是匿名的block是一个栈block，如果这是对其使用[^{val = 1;} copy],则就会变成一个堆block；
+void (^block1) = ^{val=1;}; //注意，在MRC下，block1是一个栈block，因为它引用了外部变量。但是在ARC下，它是一个堆block，因为 = 左侧block1默认是 __ strong类型，相当于上文说的“将block赋值给__strong修饰的类型或成员变量”，所以在ARC下，大部分block其实都是堆block。
+```
+所以 在MRC中，block属性只能使用copy关键字，在ARC中，block属性可以使用Strong关键字和copy关键字。在实际开发过程中，为了使代码在ARC和MRC中都能使用，所以我们一般推荐使用copy关键字。
 
+* 截获变量：
+block最常见的使用常见是异步回调的，也就是说不是顺序执行的，所以就涉及到使用了外部变量的情况下，如果外部变量修改了，会不会影响到block里的使用的问题。block对变量的截获主要分为以下几种情况：
+	* block对于全局变量和静态变量是不进行截获的，因为它的作用域足够广，所以可以直接使用；
+	* block对于局部的基础数据类型，直接截获其值。也就是说后续的修改跟它没什么关系；
+	* block对于局部的对象类型，则是连同其所有权修饰符一起截获；所以这就导致了循环引用的可能性。
+* block循环引用：
+由于block对局部对象类型的截获变量特性，所以就导致了可能存在的循环引用问题。如果对象类型是 _ _ strong类型的，那么block对其进行截获是会连同所有权修饰符一起截获，也就是说在block内部也是使用了一个 _ _ strong类型的变量强引用了它。所以这就导致了循环引用的问题。所以最好的解决方案就是对截获的变量使用  _ _ weak 的变量去替代它。其次常用的解决循环引用的方法就是断环。
+
+* --block：
+什么是 _ _ block? 
+添加了 _ _ block修饰符的变量最终会变成一个multiple的结构体，结构体中含有isa指针。也就是说 使用了 _ _ block修饰的变量最终变成了对象。但是在**ARC和MRC下是有区别**的。在MRC下使用 _ _ block修饰的变量，不会增加对象的引用计数；在ARC下，使用 _ _ block修饰的变量，会增加其引用计数。所以就有一道痕经典的面试题:
+```
+{
+    __block id * blockSelf = self;
+    _block = ^int(int num){
+        return num * blockSelf.var;
+    };
+    _block(3);
+}
+//分析：由于在MRC下，__block修饰的变量不会增加引用计数，所以也就不存在强引用的问题，所以这段代码在MRC下是不会有问题的。但是在ARC下，它是存在循环引用的。所以可以使用断环的方式进行处理：
+{
+    __block id * blockSelf = self;
+    _block = ^int(int num){
+        int result = num * blockSelf.var;
+        blockSelf = nil;
+        return result;
+    };
+    _block(3);
+}
+
+```
+* block的copy操作：
+通过上面的分析，我们知道对全局block进行copy不会有任务反应，对栈block进行copy则会被拷贝到堆上，对堆block进行copy操作则会增加其引用计数。那实际上，对栈block进行copy操作时，在堆上也产生了一个一样的block，同时也使栈block的_ _forwarding指向了堆区的block，所以此时对栈block进行操作实际就是通过_ _forwarding指针找到对应的堆block，然后再进行操作。同时，在MRC下，对栈block进行copy操作就如同执行了一个malloc方法，所以同样存在内存泄漏的问题。
 
 
 #### 内存管理
@@ -653,131 +698,3 @@ A *a = [[A alloc]init];
 * 
 
 
-##### 实践
-* 创建一个常驻线程
-```
-#pragma mark -- RunLoop 实现常驻线程
-static BOOL runAlways = YES;
-- (void)usethread {
-    [self performSelector:@selector(subThreadRun) onThread:self.thread withObject:nil waitUntilDone:NO];
-}
-
-//线程安全的方式创建thread
-- (NSThread *)thread {
-    if (_thread == nil) {
-        @synchronized (self) {
-            _thread = [[NSThread alloc] initWithTarget:self selector:@selector(runThread) object:nil];
-            [_thread setName:@"com.fcf.thread"];
-            [_thread start];// 启动
-        }
-    }
-    return _thread;
-}
-
-- (void)runThread {
-    //方法一：创建一个可控的runloop
-    //创建一个source
-    CFRunLoopSourceContext context = {0,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL};
-    CFRunLoopSourceRef source = CFRunLoopSourceCreate(kCFAllocatorDefault, 0, &context);
-
-    //创建runloop，同时向runloop的defaultmode添加source CFRunLoopGetCurrent类似懒加载方法
-    CFRunLoopAddSource(CFRunLoopGetCurrent(), source, kCFRunLoopDefaultMode);
-
-    while (runAlways) {
-        @autoreleasepool {
-            //将当前runloop运行在kCFRunLoopDefaultMode下
-            CFRunLoopRunInMode(kCFRunLoopDefaultMode, 1.0e10, true);
-        }
-    }
-
-    //当runaway为NO时跳出runloop，线程退出
-    CFRunLoopRemoveSource(CFRunLoopGetCurrent(), source, kCFRunLoopDefaultMode);
-    CFRelease(source);
-    
-    //方法二：创建一个一直存在的runloop
-//    @autoreleasepool {
-//        NSRunLoop * runloop = [NSRunLoop currentRunLoop];
-//        [runloop addPort:[NSMachPort port] forMode:NSRunLoopCommonModes];
-//        NSLog(@"启动RunLoop前--%@",runloop.currentMode);
-//        [runloop run];
-//    }
-    
-}
-
-- (void) subThreadRun {
-    NSLog(@"启动RunLoop后--%@",[NSRunLoop currentRunLoop].currentMode);
-    NSLog(@"%@----子线程任务开始",[NSThread currentThread]);
-    [NSThread sleepForTimeInterval:3.0];
-    NSLog(@"%@----子线程任务结束",[NSThread currentThread]);
-}
-```
-* UITableView + Runloop优化：
-* 可以利用UI渲染的原理先对cell进行一些处理，比如说把高度计算、对象生成这些先在reload之前做好，然后cell上控件 实现异步绘制等，比如使用AsynDisplayKit，其次尽量避免离屏渲染。
-* 也可以利用runloop，利用runloop休眠时机执行耗时操作。方法就是使用一个定时器，然后将定时器放置到runloop里面，然后实现一个监听方法监听runloop的runloopbeforewaiting状态。然后在observer方法中执行耗时任务。
-
-* 音视频上传下载（断点续传）
-断点下载：主要是利用Alamofire的 Downloader resume方法，传入已下载好的缓存的data。
-
-断点续传：断点续传稍微复杂一点，但是和断点下载原理是一样的。大概流程就是我们data数据分割成多个片段；然后建一个小的数据model，它里边包含了每个片段的data数据，以及对应片段标记上传状态(waiting、finish、loading)，之后存储到本地。然后使用信号量和group将片段一个一个上传。如果网络中断了，下次进来的时候，查看一下是否有需要上传的文件，然后从上传断开处接着上传就好了。
-
-```OC
-//模拟代码，没有做本地缓存操作
-{
-	//分片阶段
-	NSString *ps = [P stringByAppendingPathComponent:@"bz.jpg"];
-    NSData* imgData =[[NSData alloc] initWithContentsOfFile:ps];
-    NSUInteger totalLength = [imgData length];
-    NSUInteger minBlock = 10*1024;
-    NSUInteger count = totalLength/minBlock +(totalLength%minBlock?1:0);
-    NSUInteger lastIndexLength = totalLength - (count -1)*minBlock;
-    NSMutableArray *list = [[NSMutableArray alloc] initWithCapacity:count];
-    for(NSUInteger i =0; i<count-1; i++){
-        NSData *d = [imgData subdataWithRange:NSMakeRange(i*(minBlock), minBlock)];
-        [list addObject:d];
-    }
-    //最后一片
-    NSData *d = [imgData subdataWithRange:NSMakeRange((count -1)*minBlock, lastIndexLength)];
-     [list addObject:d];
-     
-    /*
-    将分片data重新整合，实验整合的图片能不能正常使用
-    NSMutableData *mutableData = [[NSMutableData alloc] init];
-    for (NSData *d in list) {
-        [mutableData appendData:d];
-    }
-    UIImage *img = [[UIImage alloc] initWithData:mutableData];
-    */
-    
-    //上传
-    dispatch_group_t group = dispatch_group_create();
-    dispatch_semaphore_t semaphore = dispatch_semaphore_create(0);//使用信号量控制每次
-    dispatch_queue_t queue = dispatch_queue_create(NULL,DISPARCH_QUEUE_SERIAL)//使用串行，因为要保证片段是按顺序上传的
-    for (int i =0; i<[list count]  ; i++) {
-         dispatch_group_async(group, queue, ^{
-         NSData *d = list[i];
-        AFHTTPSessionManager *manager = [AFHTTPSessionManager manager];
-        manager.responseSerializer = [AFHTTPResponseSerializer serializer];
-        [manager POST:@"http://10.0.1.4:8778/hb/user/uploaddd.do" parameters:@{@"tmpId":@(i)} constructingBodyWithBlock:^(id<AFMultipartFormData>  _Nonnull formData) {
-            [formData appendPartWithFileData:d name:@"uploadFile" fileName:@"uploadFile" mimeType:@"application/octet-stream"];
-        } progress:^(NSProgress * _Nonnull uploadProgress) {
-            NSLog(@"%lld     ------ %lld",uploadProgress.totalUnitCount,uploadProgress.completedUnitCount);
-        } success:^(NSURLSessionDataTask * _Nonnull task, id  _Nullable responseObject) {
-            NSLog(@"%d",i);//顺序打印
-            dispatch_semaphore_signal(semaphore);
-        } failure:^(NSURLSessionDataTask * _Nullable task, NSError * _Nonnull error) {
-            NSLog(@"%d",i);//顺序打印
-            dispatch_semaphore_signal(semaphore); 
-        }];
-            dispatch_semaphore_wait(semaphore, DISPATCH_TIME_FOREVER);
-        });
-    }
-    
-    
-    dispatch_group_notify(group, queue, ^{
-        //所有请求返回数据后执行
-        
-        
-    });
-}
-
-```
