完善多线程的学习01

--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -290,7 +290,8 @@ SerialQueue.sync{
     SerialQueue.async{
     }
 }
-//分析：同上面的分析类似。外部任务要执行完成得要内部任务执行完成，内部任务
+//分析：同上面的分析类似。外部任务要执行完成得要内部任务执行完成，内部任务使用异步执行，线程无需等待执行完会立即返回，所以虽然都是在当前线程中执行，但是因为内部的任务不会长占线程，所以是可以执行完成的。内部任务执行完成后，外部任务也就可以执行完成
+
 ```
 
 2、global_queue是一个并发队列，创建全局队列时，第一个参数是一个优先级的标识，所以如果要在并行队列中，让任务先执行，这可以通过设置这个优先级来达到目的（但是这里要注意，先执行并不一定是第一个执行完，它只能保证开始的执行顺序而已）。它的优先级包括（低-高：background（同步备份数据）、utility（需要时间的下载）、default、user-Initiated(用户出发的，如打开文件)、user-Interractive(用户交互，如主线程事件)）
