--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -273,14 +273,17 @@ NSThread * thread = [[NSThread alloc] initWithTarget:self selector:@selector(xxx
 GCD是一个多核并行运算的解决方案，它可以自动管理线程的生命周期，只需要告诉GCD干什么就行。
 ##### 队列和任务:
 * 队列分为**串行**和**并发**：
-串行派发是指同一时间，队列中只能执行一个任务，只有在当前任务执行完成后，才会派发新的任务；并发是指多个任务可以在同一时间同时进行，无需等待前面的任务执行完也可以派发新任务；iOS中主队列mian是一种串行队列，全局队列global是一种并发队列；
+串行派发是指同一时间，队列中只能执行一个任务，只有在当前任务执行完成后，才会派发新的任务；并发是指多个任务可以在同一时间同时进行，无需等待前面的任务执行完也可以派发新任务；
+
+iOS中主队列mian是一种串行队列，全局队列global是一种并发队列；global_queue是一个并发队列，创建全局队列时，第一个参数是一个优先级的标识，所以如果要在并行队列中，让任务先执行，这可以通过设置这个优先级来达到目的（但是这里要注意，先执行并不一定是第一个执行完，它只能保证开始的执行顺序而已）。它的优先级包括（低-高：background（同步备份数据）、utility（需要时间的下载）、default、user-Initiated(用户出发的，如打开文件)、user-Interractive(用户交互，如主线程事件)）
+
 * 任务分为**同步**执行和**异步**执行：
 同步执行是在当前线程中执行，异步执行会在线程池中获取一个线程进行执行，如果线程池中没有则会创建一个新的线程执行；
 
 ##### 4种线程组合：
 * 同步串行：同步不开启新线程，串行队列让任务一个一个执行。所以它实际不会产生多线程运算；
-* 同步并发：并发队列虽然可以并发执行，但是同步执行不开启线程，也就相当于任务只在一个线程中执行，所以也不构成多线程运算；
-* 异步串行：异步执行虽然会开线程，但是串行队列中任务一个个执行，导致最终也是只有一个线程在执行，所以也不构成多线程运算；
+* 同步并发：并发队列虽然可以并发执行，但是同步执行不开启线程，也就相当于任务只在一个线程中执行，而一个线程一次只能处理一个事件，所以实际也不构成多线程运算；
+* 异步串行：异步执行虽然会开线程，但是串行队列中任务一个个执行，所以也不构成多线程运算；
 * 异步并发：并发队列可以让任务并发执行，异步执行可以开启多个线程，所以这才会真正实现多线程运算。
 ```
 //eg 01
@@ -293,25 +296,13 @@ SerialQueue.sync{
     SerialQueue.async{
     }
 }
-//分析：同上面的分析类似。使用串行队列，最外层任务是在当前线程中执行，内部任务会开辟新的线程执行。外部任务的执行完成意味着内部任务也执行完成，所以这个是可以正常执行的！
+//分析：同上面的分析类似。使用串行队列，最外层任务是在当前线程中执行，内部任务会开辟新的线程执行。外部任务的执行完成意味着内部任务也执行完成，而内部任务可以在另外的线程中执行完成，所以这个是可以正常运行的！
 ```
-
-##### global_queue 
-
 ##### dispatch_barrier
-
-
-2、global_queue是一个并发队列，创建全局队列时，第一个参数是一个优先级的标识，所以如果要在并行队列中，让任务先执行，这可以通过设置这个优先级来达到目的（但是这里要注意，先执行并不一定是第一个执行完，它只能保证开始的执行顺序而已）。它的优先级包括（低-高：background（同步备份数据）、utility（需要时间的下载）、default、user-Initiated(用户出发的，如打开文件)、user-Interractive(用户交互，如主线程事件)）
-
-
-
-#### 多线程
-[如何高效使用多线程](https://juejin.im/post/5d3faa9de51d4561f95ee9b7#heading-4)
-
-##### GCD:
-
-
-3、Dispatch_Barrier栅栏，实现多读单写
+dispatch_barrier是指栅栏调用，它的特点是无论是同步还是异步，都会阻塞当前线程，也就是说它会等待所有之前入队的任务都执行完成才开始执行，而在之后入队的所有任务会等待dispatch_barrier本身任务执行完成再执行。
+* dispatch_barrier_async与dispatch_barrier_sync的执行效果是一样的，区别就在于：sync会阻塞后续线程入队，async不会阻塞入队。但是执行时候的效果是一样的
+* dispatch_barrier_async和dispatch_barrier_sync只有在自定义的并发队列中才能有栅栏效果，否则它与dispatch_async或dispatch_sync的作用是一样的。所以它在串行队列中同样容易导致死锁。
+* dispatch_barrier实现多读单写
 ```swift
 A{
     set{
@@ -320,6 +311,7 @@ A{
         }
     }
     get{
+    //注意这里使用同步读取
         ConcurentQueue.sync{
             return _a
         }
@@ -327,7 +319,59 @@ A{
     
 }
 ```
-4、信号量：信号量可以改变全局队列里设置好的优先级。
+##### dispatch_group调度组
+dispatch_group可以实现先并发处理一些任务，然后监听所有任务的执行完成。
+dispatch_group_async可以异步添加任务到group中，如果无需涉及线程或者队列的话，则可以使用dispatch_group_enter和dispatch_group_leave**配对**执行，比如接口任务。最后使用dispatch_group_notify通知group所有任务已完成
+```
+{
+//注意点：dispatch_group_async与dispatch_group_enter效果是一样的，都是异步添加任务，dispatch_group_enter与dispatch_group_leave必须成对出现，否则group中的任务永远不会完成。
+    let group = DispatchGroup()
+    DispatchQueue.global().async(group: group, qos: DispatchQoS.default, flags: []) {
+      sleep(1000)
+      print("任务1")
+   }
+    
+    dispatch_group_enter(group)
+    self.request1({
+      sleep(1000)
+      print("任务2")
+      dispatch_group_leave(group)
+    })
+    
+    dispatch_group_enter(group)
+    self.request2({
+      sleep(1000)
+      print("任务3")
+      dispatch_group_leave(group)
+    })
+    
+    dispatch_group_notify(group,dispatch_get_main_queue(),^{
+        print(finish)
+    })
+}
+```
+##### dispatch_semaphore 信号量
+dispatch_semaphore俗称信号量，也叫信号锁，用于控制多线程下资源访问的数量。
+三个方法：
+* dispatch_semaphore_create: 创建一个带有初始值的信号量dispatch_semaphore_t。信号初始值为0的话相当于线程同步，信号值大于0的话，相当于加锁效果；
+* dispatch_semaphore_wait: 这个方法主要用于减少信号量，每次调用都会对信号量进行减1。所以当信号值小于0时，这个方法会一直等待，也就是阻塞当前线程，直到信号量大于0时；当这个信号值大于或等于0时，会直接返回，不会阻塞当前线程；
+* dispatch_semaphore_single: 这个方法用于让信号值加1，然后直接返回，如果先前信号量的值小于0，那么这个方法会唤醒先前等待的线程；
+```
+//线程同步
+let semaphonre = DispatchSemaphore(value: 0)
+self.request2({
+	print("执行耗时任务，比如接口请求")
+	sleep(1000)
+	semaphore.signal()
+})
+print("开始等待")
+semaphore.wait(timeout: DispatchTime.distantFuture)
+print("任务结束")
+
+//资源加锁
+
+```
+* 改变全局队列里设置好的优先级。
 ```swift
 var highQueue = Dispatch.global(qos:.userInitiated)
 var lowQueue = Dispatch.global(qos:.utility)
@@ -345,7 +389,9 @@ highQueue.asycn{
 }
 //这里lowQueue的优先级更高。
 ```
-5、死锁的几种情况
+https://juejin.im/post/5cc819cfe51d456e4869548d
+
+##### 死锁的几种情况
 ```swift
 //1、串行队列：异步里同步嵌套
 SerialQueue.async{
@@ -373,30 +419,7 @@ let operaB = Operation()
 operaA.addDependency(operaB)
 operaB.addDependency(operaA)
 ```
-6、dispatch_group
-dispatch_group_async里应该执行同步请求，如果执行异步请求，线程会立即返回，达不到想要的效果，所以要使用dispatch_group_enter(group)和dispatch_group_leave(group)来实现
-```oc
-{
-    dispatch_group_t group = dispatch_group_create()
-    
-    dispatch_group_enter(group)
-    self.request1({
-      sleep(1000)
-      dispatch_group_leave(group)
-    })
-    
-    dispatch_group_enter(group)
-    self.request2({
-      sleep(1000)
-      dispatch_group_leave(group)
-    })
-    
-    dispatch_group_notify(group,dispatch_get_main_queue(),^{
-        print(finish)
-    })
-}
-```
-
+[如何高效使用多线程](https://juejin.im/post/5d3faa9de51d4561f95ee9b7#heading-4)
 ##### Operation：
 Operation是指一个单独的任务，然后把它放到OperationQueue中实现多线程运行效果，OperationQueue实现了暂停、继续、终止、优先顺序、依赖等操作。同时通过设置最大并发量maxConcurentOperationCount来确定其实串行还是并发。
 Operation包含有常见4个状态：isReady(就绪)、Executing(运行中)、Cancelled(取消)、finished(完成)。
