--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -417,14 +417,111 @@ semaphore = dispatch_semaphore_create(3);
 
 https://juejin.im/post/5cc819cfe51d456e4869548d
 
-##### Operation：
-Operation是指一个单独的任务，然后把它放到OperationQueue中实现多线程运行效果，OperationQueue实现了暂停、继续、终止、优先顺序、依赖等操作。同时通过设置最大并发量maxConcurentOperationCount来确定其实串行还是并发。
+#### Operation：
+NSOperation是苹果在GCD的基础上封装的更面试对象的多线程方案。它使用两种概念：**操作Operation**和**队列OperationQueue**来实现多线程。将操作添加进队列中实现多线程。
+**操作**：
+	* 操作其实就是对应着GCD的block。但是NSOperation的操作更复杂一些，它可以管理自己的状态和优先级。NSOperation使用其子类来定义操作:NSInvocationOperation、NSBlockOperation、自定义子类。
+	* 每个操作都对应着4个状态：isReady(是否就绪)、isExecuting(是否进行中)、isCancelled(是否取消)、isFinished(是否完成)。
+	* 单独的操作只在当前线程中执行。
+**队列**：
+	* NSOperation的队列有区别于GCD的先进先出的调度队列。NSOperationQueue是根据NSOperation的依赖关系来决定将队列中的哪个Operation置成就绪状态，然后进入就绪状态的Operation的**开始执行顺序**取决于操作之间的优先级；
+	* OperationQueue实现了暂停、继续、终止、优先顺序、依赖等操作。同时通过设置最大并发量maxConcurentOperationCount来确定其实串行还是并发。
+	* NSOperationQueue只提供了两种不同的队列：主队列和自定义队列；
+##### NSInvocationOperation
+NSInvocationOperation是不使用block方式的操作，同样的，单独的NSInvocationOperation只在当前线程执行。
+```
+- (void)useInvocationOperation {
+    NSInvocationOperation * iop = [[NSInvocationOperation alloc]initWithTarget:self selector:@selector(test) object:nil];
+	//注意得手动开启
+	[iop start];
+}
+```
+##### NSBlockOperation
+同样的，单独地使用NSBlockOperation也只是在当期线程执行
+```
+- (void)useBlockOperation {
+    NSBlockOperation * bop = [NSBlockOperation blockOperationWithBlock:^{
+       [Thread sleepForTimeInterval:20]; 
+    }];
+    //注意得手动开启
+	[bop start];
+}
+```
+但是，NSBlockOperation还提供了一个**addExecutionBlock**来添加额外的操作。使用了addExecutionBlock的话，那所有的操作都可以在不同的线程中同时并发执行,包括NSBlockOperation。也就是说NSBlockOperation是否开启多线程一般取决于操作个数，但是开启的线程数是由系统决定的。
+```
+- (void)useBlockOperationWithAddExecutionBlock {
+    NSBlockOperation * bop = [NSBlockOperation blockOperationWithBlock:^{
+       [Thread sleepForTimeInterval:20]; 
+    }];
+    
+	[bop addExecutionBlock:^{
+        [Thread sleepForTimeInterval:20]; 
+	}];
+    [bop addExecutionBlock:^{
+        [Thread sleepForTimeInterval:20]; 
+	}];
+	[bop addExecutionBlock:^{
+        [Thread sleepForTimeInterval:20]; 
+	}];
+    
+    
+    //注意得手动开启
+	[bop start];
+}
+```
+##### 自定义Operation
+如果想自己控制操作的状态，则可以自定义Operation，自定义的Operation又分为非并行的Operation和并行Operation：
+* 非并行Operation：
+非并行的Operation只需要实现main函数即可，将操作代码放到main函数里：
+```
+@interface CustomSyncOpretion:NSOperation
+@end
+@implementation CustomSyncOpretion
+- (void)main{
+	if ([self isCancelled] == NO) {
+        [Thread sleepForTimeInterval:20]; 
+	}
+}
+@end
+
+//使用
+CustomSyncOpretion *cop = [[CustomSyncOpretion alloc] init];
+//调用 start 方法开始执行操作
+[cop start];
+```
+* 并行Operation：
+并行的Operation需要重写以下方法
+	* start:和上面的main函数一致，将任务操作代码放里面，注意，任何时候都不用在这里调用父类的start方法。
+	* isExecuting:是否正在执行，需要手动调用KVO方法来进行通知
+	* isFinished:是否已完成，需要手动调用KVO方法来进行通知
+	* isAsynchronous:是否并发执行
+```
+@interface CustomAsyncOpretion : NSOperation
+@end
+
+@interface CustomAsyncOpretion(){
+    BOOL executing;
+    BOOL finished;
+}
+@end
+
+@implementation CustomAsyncOpretion
+
+@end
+
+```
+
+
+
+
+
 Operation包含有常见4个状态：isReady(就绪)、Executing(运行中)、Cancelled(取消)、finished(完成)。
 实现NSOperation可以通过它的子类NSIvocationOperation和NSBlockOperation，或者继承自NSOperation自定义。
 1、Operation的取消操作，如果任务已经开始，那此时调用cancel是没有用的，所以得等任务结束之后判断是否isCancel来确定是否继续接下来的操作
 2、依赖关系，如果存在相互依赖的环就会造成死锁
 3、单纯的NSIvocationOperation和NSBlockOperation的start方法是同步执行的，要放到OperationQueue里才能实现异步执行
 4、自定义Operation的时候，如果不重新它的状态方法，只重写main函数(执行体在main函数里)，则它的状态可以直接使用不需要代码控制，所以说也可以通过重写isReady、isCancelled、isFinish等方法来控制状态。
+##### 队列
 5、自定义Operation的时候，main函数里的执行体同样是同步执行的，那如果要异步请求一些操作，则应该和runloop结合起来使用
 ```swift
 class CusOperation:Operation{
