完成事件及手势相关的学习

--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -715,30 +715,51 @@ operaB.addDependency(operaA)
 ```
 
 #### 高效使用多线程
-
 * 减少队列切换
-
 * 控制线程数量。一个进程最多开启多少线程？目前我不是很清楚。但是过多的线程及线程调度肯定是非常耗性能的，所以最好的做法是开启和CPU核心数量一样的串行队列，提高CPU使用效率。
-
 * 权衡线程优先级。比如大量图片异步解压过程。应该让查询磁盘的线程优先级高一点，让解压的优先级低一点。
-
 * 主线程优化。比如Cell的复用机制、懒加载机制都能减少CPU的使用
-
-  
 
 [如何高效使用多线程](https://juejin.im/post/5d3faa9de51d4561f95ee9b7#heading-4)
 
 
+### 事件及手势
+#### 触摸——事件——响应者
+* 触摸UITouch：就是一次触摸屏幕。它对应生成一个UITouch对象。多个手指触摸生成多个UITouch对象。在同一个位置双击，则会更新第一次单击的tap count值。每个UITouch对象记录了触摸的时间、位置、阶段、所处视图、窗口等。
+* 事件UIEvent：一个触摸事件对应一个UIEvent。当然了UIEvent也可能不对应UITouch，也可能是其他的事件，比如抖动事件。
+* 响应值UIResponder：每个响应者都是一个UIResponder对象。比如UIView、AppDelegat等。
 
+#### 事件响应
+* 1、手指触碰到屏幕后，将由系统判断决定是否传递给前台APP进程
+* 2、APP进程接收到触摸事件后，触发source1回调，主线程的runloop就被唤醒；
+* 3、主线程被唤醒之后，source1事件被包装成source0事件，添加到UIApplication对象的事件队列中；
+* 4、等到事件出队后，就开始寻找最佳响应者的过程；
+* 5、寻找到最佳响应者之后，接下来的事情便是事件在响应链中的传递及响应了；
+##### 寻找最佳响应者
+1、事件出队后，UIApplication首先将其传递给UIWindow，如果存在多个Window，则优先传给后显示的window；
+2、若该window不能响应事件，则将事件传递给其他window。若该window能响应事件，则从后往前询问窗口子视图；
+3、子视图中，若能响应，则自下而上传递，若其子视图不响应，则自身是最合适的响应者。若不能响应，则传递给其同级的前一个兄弟视图；
+4、找到最佳响应者后，然后将其回溯返回给UIWindow。
+5、找到最佳响应者后，则开始将事件在响应链中进行传递。**注意**前面步骤的传递是自下而上（window到最佳响应者）地传递，为了找到最佳响应者。而这里的事件传递则是将直接在响应链中传递，以便将事件进行响应，这是自上而下（最佳响应者向UIWindow传递）进行的；
+6、每个响应者都有4个默认实现的响应事件触摸的方法：touchBegan:withEvent:、touchMoved:withEvent:、touchEnded:withEvent:、touchCancelled:withEvent:。所以可以在这些方法中对事件进行拦截做一些额外的处理。**touchBegan:withEvent也正是事件在响应链中的传递方式**；所以重写touchBegan:withEvent也能够让事件不再往下传递。
 
+* 如何判断是否能响应？
+每个UIView都有一个hitTest:withEvent方法，该方法返回一个能响应的UIView对象。比如：事件传递到UIWindow，UIWindow执行hitTest:withEvent:判断自身能否响应事件，若可以，则调用子视图的hitTest:withTest:将事件传递给子视图，并在子视图中查找最佳响应者。找到了之后就回溯给UIApplication一个最佳响应者视图。
+hitTest:withEvent:方法的判断标准包括：是否允许交互、是否隐藏、透明度是否小于0.01，若这三个条件都通过，则会判断触摸点是否在当前视图的坐标系范围内。
+* 如何判断触摸点是否在当前视图坐标系范围内？
+pointINside:withEvent:方法用于判断触摸点是否在自身坐标范围内，返回一个bool值。注意的是次判断的时候都得以自身坐标系为准，所以应当使用covertPoint:toView:先进行坐标系转换。所以一般项目中碰到扩大按钮点击区域、tabBar凸出的按钮点击不响应等问题，则可以重写pointInside:withEvent:方法。
+* 知道最佳响应者后，事件如何继续沿着响应链传递？
+首先每个响应者都有一个nextResponder方法，用于将事件传递下一个响应者：若UIView是视图控制器的根视图，则其nextResponder是视图控制器，否则其nextResponder是其父视图；若视图控制器是window的根控制器，则其nextResponder是UIWindoi，否则是其前一个控制器；UIWindow的nextResponder是UIApplication；UIApplication的nextResponder是AppDelegate。
+所以一旦找到最佳响应者后，整个响应链也就确定了。然后UIApplication会将事件通过sendEvent根据UITouch绑定的window传递给对应的UIWindow，UIWindow同样使用sendEvent通过UITouch绑定的touch对象将事件传递给hitTestView。
 
-### 所有事件及手势
-1、当触摸事件发生后，系统会将该事件添加进UIApplication管理的队列事件中；
-2、UIApplicatioA会从事件队列中取出该事件，并将事件分发给keywindow；
-3、然后keywindow会判断hitTestwithEvent来返回最终响应的视图，那在这个过程中会调用pointInsert判断点击事件是否在当前视图的范围内，如果在，则会倒序遍历子视图，来判断是否是该视图响应事件。注意在pointInsertEvent内，需要使用convertpoint：toView：来进行坐标系转换
+* UIResponder、UIGestureRecognizer、UIControl同时存在时，会怎么响应？
+	* **手势识别器比UIResponder的响应优先级更高**。Window在将事件传递给最佳响应者之前，会将事件先传递给最佳响应者视图对应的视图控制器的手势识别器中。若手势识别器成功识别了事件，就Application会取消最佳响应者对对事件的响应；
+	* 手势识别器UIGestureRecognizer同样通过那4个touch方法来判断是否接收事件的；
+	* Window先将绑定了触摸对象的事件传递给触摸对象绑定的手势识别器，然后再发送给最佳响应者对应的hitTestView；手势识别器识别手势期间，若触摸对象的触摸状态发生了变化，事件会先发送给手势识别器，再发送给hitTestView；手势识别器若成功识别了手势，则会通知UIApplication取消hitTestView对事件的响应；若手势识别器未能识别手势，此时触摸接收，则停止向手势识别器发送事件，仅向hitTestView发送事件；所手势识别器未能识别手势，且此时触摸已结束，则向hitTestView发送end状态以停止对事件进行响应。
+将手势识别器的delaysTouchesBegan属性置为YES表示是否在手势识别期间截断事件，不将事件发送给hitTestView；
+	* **UIControl比手势识别器的响应优先级更高**。比如UIButton。
 
-
-
+[触摸事件全家桶](https://www.jianshu.com/p/c294d1bd963d)
 
 
 ### 网络相关
