优化笔记结构

--- a/读书笔记/iOS高级笔记/知识小集02.md
+++ b/读书笔记/iOS高级笔记/知识小集02.md
@@ -6,8 +6,8 @@ categories: iOS进阶
 description: 总结了OC学习当中的主要理论知识的实践相关，以代码为主，跟知识小集00、01相辅相成
 ---
 
-##### 实践
-* 创建一个常驻线程
+###实践与优化
+#### 创建一个常驻线程
 ```
 #pragma mark -- RunLoop 实现常驻线程
 static BOOL runAlways = YES;
@@ -64,11 +64,11 @@ static BOOL runAlways = YES;
     NSLog(@"%@----子线程任务结束",[NSThread currentThread]);
 }
 ```
-* UITableView + Runloop优化：
+#### UITableView + Runloop优化：
 * 可以利用UI渲染的原理先对cell进行一些处理，比如说把高度计算、对象生成这些先在reload之前做好，然后cell上控件 实现异步绘制等，比如使用AsynDisplayKit，其次尽量避免离屏渲染。
 * 也可以利用runloop，利用runloop休眠时机执行耗时操作。方法就是使用一个定时器，然后将定时器放置到runloop里面，然后实现一个监听方法监听runloop的runloopbeforewaiting状态。然后在observer方法中执行耗时任务。
 
-* 音视频上传下载（断点续传）
+#### 音视频上传下载（断点续传）
   断点下载：主要是利用Alamofire的 Downloader resume方法，传入已下载好的缓存的data。
 
 断点续传：断点续传稍微复杂一点，但是和断点下载原理是一样的。大概流程就是我们data数据分割成多个片段；然后建一个小的数据model，它里边包含了每个片段的data数据，以及对应片段标记上传状态(waiting、finish、loading)，之后存储到本地。然后使用信号量和group将片段一个一个上传。如果网络中断了，下次进来的时候，查看一下是否有需要上传的文件，然后从上传断开处接着上传就好了。
@@ -134,3 +134,20 @@ static BOOL runAlways = YES;
 }
 
 ```
+
+#### runtime处理埋点和越界崩溃
+runtime是指在程序运行期间才能确认对应的数据类型和方法调用等，OC有三大动态特性动态类型、动态加载、动态绑定，这都是通过runtime的机制实现的。
+
+* 埋点
+埋点主要是为了抓取一些主要的日志数据，然后上报。以便于在一些特殊的节点，可以通过日志查找到相关的数据和用户操作信息，更利于解决问题。
+首先我们需要对日志进行分类，1是基本的接口日志(主要运用于测试)，2是用户的主要操作日志，3是主要节点日志(比如购买的信息身份的转变等)，4是异常日志(这个主要是依赖于bugly)
+1、页面的统计：使用Method Swizzing代码混淆，重写UIViewController的ViewDidLoad方法。
+2、点击统计：通过Method Swizzing代码混淆，hook sendAction:to:forEvent:方法。
+3、tableview的cell点击：通过hook setDelegate方法，在设置代理时，再Swizzing代理实现了的didSelect方法。
+4、然后剩余的关键节点的日志就得使用代码进行log了。
+
+然后就是上传服务器，可以在日志达到一定容量时进行上传。记得添加断点续传
+
+* 越界崩溃
+首先越界崩溃也是通过runtime的方法混淆来做的，但是需要注意的是：抽象工厂模式的一些类的具体实现是隐藏的，也就是说，它们对应的真实名字分别是：NSArray----- NSArrayI；NSMutablArray ---- NSArrayM；NSDictionary---NSDictionaryI；NSMutableDictionary ---- NSDictionaryM。
+然后使用swizing混淆相应方法。比如objectAtIndex
