--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -857,115 +857,24 @@ socket 是使用标准Unix文件描述符合其他程序进行通讯的方式，
 * socket与http：
 * socket 打洞：
 
-
-### 实践与优化
-##### runtime 及其埋点和越界崩溃
-runtime是指在程序运行期间才能确认对应的数据类型和方法调用等，OC有三大动态特性动态类型、动态加载、动态绑定，这都是通过runtime的机制实现的。
-
-* 埋点
-埋点主要是为了抓取一些主要的日志数据，然后上报。以便于在一些特殊的节点，可以通过日志查找到相关的数据和用户操作信息，更利于解决问题。
-首先我们需要对日志进行分类，1是基本的接口日志(主要运用于测试)，2是用户的主要操作日志，3是主要节点日志(比如购买的信息身份的转变等)，4是异常日志(这个主要是依赖于bugly)
-1、页面的统计：使用Method Swizzing代码混淆，重写UIViewController的ViewDidLoad方法。
-2、点击统计：通过Method Swizzing代码混淆，hook sendAction:to:forEvent:方法。
-3、tableview的cell点击：通过hook setDelegate方法，在设置代理时，再Swizzing代理实现了的didSelect方法。
-4、然后剩余的关键节点的日志就得使用代码进行log了。
-
-然后就是上传服务器，可以在日志达到一定容量时进行上传。记得添加断点续传
-
-* 越界崩溃
-首先越界崩溃也是通过runtime的方法混淆来做的，但是需要注意的是：抽象工厂模式的一些类的具体实现是隐藏的，也就是说，它们对应的真实名字分别是：NSArray----- NSArrayI；NSMutablArray ---- NSArrayM；NSDictionary---NSDictionaryI；NSMutableDictionary ---- NSDictionaryM。
-然后使用swizing混淆相应方法。比如objectAtIndex
-
-
-### 播放器
-通过kvo的方式监听"Status"和"loadedTimeranges"来分别监听播放状态和缓存时长。
-
-### FPS检测原理：CADisplayLink
-
-### 直播的流程和API:
-
-### IM流程：
-
-### 音视频相关:
-
-
-### 常用三方库的实现原理和总结
-3、Alamofire、SwiftJSon、SDWebImage、AsyncDisplayKit、realm大概使用与实现原理
-#### AFNetworking
-整体框架：AFNetWorking整体框架主要是由会话模块(NSURLSession)、网络监听模块、网络安全模块、请求序列化和响应序列化的封装以及UIKit的集成模块(比如原生分类)。
-其中最核心类是AFURLSessionManager，其子类AFHTTPSessionManager包含了AFURLRequestionSerialzation(请求序列化)、AFURLResponseSerialzation(响应序列化)两部分；同时AFURLSessionManager还包含了NSURLSession(会话模块)、AFsecurityPolicy(网络安全模块：证书校验)、AFNetWorkingReachabilityManager(负责对网络连接进行监听)；
-AFURLSessionManager主要工作包括哪些？
-1、负责管理和创建NSURLSession、NSURLSessionTask
-2、实现NSURLSessionDelegate等协议的代理方法
-3、引入AFSecurityPolicy保证请求安全
-4、引入AFNetWorkingReachabilityManager监听网络状态
-
-#### Alamofire：同一个作者写的swift版本的AFNetWorking
-
-整体框架：Alamofire核心部分都在其Core文件夹内，它包含了核心的2个类、3个枚举、2个结构体；另一个文件夹Feature则包含了对这些核心数据结构的扩展。
-2个类：Manager(提供对外接口，处理NSURLSession的代理方法)；Request(对请求的处理)；
-3枚举：Method(请求方法)；ParameterEncoding(编码方式)；Result(请求成功或失败数据结构)
-2结构体：Response(响应结构体)；Error(错误对象)
-扩展中包括Manager的Upload、Download、Stream扩展、以及Request的扩展Validation和ResponseSerialization。
-怎么处理多并发请求？
-使用NSOperetionQueue！
-
-#### SDWebImage：
-整体框架：SDWebImage更多的是封装的UIKit的一些分类方法，比如说UIImageView+WebCache。主要功能是由SDWebImageManager进行管理，在此之下主要分为两部分：SDImageCache和SDWebImageDownloader，SDImageCache又同时分为磁盘缓存和内存缓存。
-加载图片的流程：通过图片URL的hash值作为key值去查找内存缓存，如果内存缓存找不到则查找磁盘缓存，如果仍然没有查找到就去进行网络下载
-
-#### AsyncDisplayKit：
-整体框架：
-正常情况下，UIView作为CALayer的delegate，而CALayer作为UIView的一个成员变量，负责视图展示工作。ASDK则是在此之上封装了一个ASNod类，它有点view的成员变量，可以生成一个UIView，同时UIView有一个.node成员属性，可以获取到它所对应的Node。而ASNode是线程安全的，它可以放到后台线程创建和修改。所以平时我们对UIView的一些相关修改就可以落地到对ASNode的属性的修改和提交，同时模仿Core Animation提交setneeddisplayer的这种形式把对ASNode的修改进行封装提交到一个全局容器中，然后监听runloop的beforewaiting的通知，当runloop进入休眠时，ASDK则可以从全局容器中把ASNode提取出来，然后把对应的属性设置一次性设置给UIView。
-
-主要解决的问题：布局的耗时运算(文本宽高、视图布局运算)、渲染(文本渲染、图片解码、图形绘制)、UIKit的对象处理(对象创建、对象调整、对象销毁)。因为这些对象基本都是在UIKit和Core Animation框架下，而UIKit和Core Animation相关操作必须在主线程中进行。所以ASDK的任务就是把这些任务从主线挪走，挪不走的就尽量优化。
-
 ### 数据库
 #### Realm：
+
 <https://juejin.im/entry/5a1d44a6f265da432f30dd09>
 
+### 设计模式
 
-### 算法
-##### 二叉树:
-前序、中序、后序遍历指的是根节点的位置。
-中序：
-```OC
-//中序，使用栈
--(void)sourt1:(Node *)root{
-   Node* p = root;
-   stack<Node *> s;
-   while(!s.empty() || p){
-       if(p){ //先将左子树全部入栈
-           s.push(p);
-           p = p.leftchild;
-       }else{
-           p = s.top();
-           s.pop();
-           print(p.value);//打印
-           p = p.rightChild; //进入右子数
-       }
-   }
-}
-//前序：也是使用栈
--(void)sourt2:(Node *)root{
-   Node* p = root;
-   stack<Node *> s;
-   while(!s.empty() || p){
-       if(p){ //先将左子树全部入栈
-	       print(p.value);//打印
-           s.push(p);
-           p = p.leftchild;
-       }else{
-           p = s.top;
-           s.pop();
-           p = p.rightChild; //进入右子数
-       }
-   }
-}
-//后序：也是使用栈。这个好难，先放弃吧
+### 编译连接
+#### 静态库 && 动态库
+#### clang && LLVM
+#### mach-O
+#### 启动优化
 
-```
 
+### WebView 及 前端 学习
+#### JavaScriptCore 
+
+#### WebCore
 
 
 
