完成socket基础学习，开始整理数据库相关

--- a/读书笔记/iOS高级笔记/知识小集01.md
+++ b/读书笔记/iOS高级笔记/知识小集01.md
@@ -90,7 +90,11 @@ https://juejin.im/post/5da1a30de51d457825210a8c
 
 ### 单元测试与可持续集成
 
+<https://juejin.im/post/5a3090f2f265da4310485d01>
 
+### Swift Package Manager
+
+<https://www.jianshu.com/p/479986e9ae80>
 
 
 ### 常用三方库的实现原理和总结
