优化部分小细节

--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -187,13 +187,40 @@ CFRunLoopRef 里包含一个pthread、一个currentMode、一个modes、一个co
 
 #### RunLoop涉及的事件：
 * CALayer或者说视图树中的视图如果层次、frame或者调用了setNeedsDisplay\setNeedsLayout，则CALayer就会被标记为待处理。等到VSync信号发出来的时候才会CPU才开始处理，VSync的信号周期也就是 runloop的刷新周期，也就是在每秒60帧的画面，16.7ms的周期；
+
 * runloop使得main函数不会退出，因为UIApplicationMain内部开启了一个主线程的runloop；
+
 * runloop可以节省CPU事件，使其有事的时候做事，没事的时候休息；
+
 * NSTimer实际是根据runloop的timer来实现的，所以默认情况下，NSTimer只能在DefaultMode下才能运行，当屏幕滑动时，则就会暂停运行，所以需要通过commonMode的方案来解决。同理，这也导致系统默认的NSTimer不准。CADisplayLink则是一个和屏幕刷新率一致的定时器，但是它同样存在和NSTimer一样的问题。 所以要想要更精准的定时器，最好使用GCD或者Facebook 开源的 AsyncDisplayLink；
+
+  ```
+  //GCD NSTimer
+  dispatch_queue_t queue = dispatch_get_global_queue(DISPATCH_QUEUE_PRIORITY_DEFAULT, 0);
+  dispatch_source_t timer = dispatch_source_creat(DISPATCH_SOURCE_TYPE_TIMER,0,0,queue);
+  dispatch_resumr(timer);
+  /* timer精度为0.1秒 */
+  dispatch_source_set_timer(timer,dispatch_timer(DISPATCH_TIME_NOW,1.0*NSEC_PER_SEC),1.0 * NSEC_PER_SEC, 0.1 * NSEC_PER_SEC);
+  dispatch_source_set_event_handler(timer, ^{
+	//定时回调了
+	if (!repeats) {
+		//取消心跳后，移除定时器
+		dispatch_source_cancel(timer);
+	}
+});
+  
+  ```
+
+  
+
 * AutoreleasePool的实现原理：AutoreleasePool及其包含的对象的内存管理是根据runloop的运行周期来确定的，具体查看内存管理章节。
+
 * 事件响应：参考上面source0和source1的分析
+
 * performSelector：当使用NSObject的performSelecter:afterDelay:（注意这里一定得是和时间有关的API），实际会在其内部创建一个NSTimer并添加到当前线程的Runloop中。所以如果当前线程没有Runloop，则这个方法会失效，比如在新创建的子线程中，如果不调用[[NSRunLoop currentRunLoop] run]则就不会调用Select中的函数。
+
 * GCD：GCD中的dispatch_async在使用到主线程的时候也使用到了RunLoop。首先GCD的所有线程仍然由libDispatch处理，但是当用到主线程的时候，libDispatch会向主线程的RunLoop发送消息，主线程的RunLoop会被唤醒，并从消息中获取block，然后回调执行。其他线程则仍由libDispatch处理。
+
 * 网络请求框架中的常驻线程；
 
 [runloop详解](https://blog.ibireme.com/2015/05/18/runloop/)
@@ -880,6 +907,7 @@ socket可以支持不同的传输层协议(TCP、UDP)，当使用TCP时，socket
 
 [swift socket实战](https://www.hangge.com/blog/cache/detail_756.html)
 
+### 加解密
 
 
 ### 数据库
@@ -939,6 +967,13 @@ for column in result {
 <https://juejin.im/entry/5a1d44a6f265da432f30dd09>
 
 ### 设计模式
+
+
+
+### 加解密
+https://juejin.im/entry/58b93af3ac502e006c0820c9
+
+
 
 ### 编译连接
 #### 静态库 && 动态库
