添加加密算法和优化编译连接过程

--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -915,9 +915,6 @@ socket可以支持不同的传输层协议(TCP、UDP)，当使用TCP时，socket
 
 [swift socket实战](https://www.hangge.com/blog/cache/detail_756.html)
 
-### 加解密
-
-
 ### 数据库
 #### SQLite基础语句学习
 SQLite数据库中有一个sqlite_master的表，它定义数据库的模式，可以在其上查询以获取所有表的索引。
@@ -976,20 +973,118 @@ for column in result {
 
 <https://juejin.im/entry/5a1d44a6f265da432f30dd09>
 
+
+### 加解密
+加密解密主要是为了解决数据安全的问题。比如使用POST请求，因为POST请求数据放在body里面相对get直接将参数暴露在外部更安全一些，其次使用HTTPS，对接口进行加密。
+数据安全基本原则：
+* 在网络上不允许传输用户隐私数据的明文；
+* 在本地不允许保存用户隐私数据明文；
+#### 常用加密方法
+* 编码方案：Base64:
+可以将任意二进制数据进行Base64编码，所有的数据都能被编码为只用65个字符A~Z a~z 0~9 + / =）就能表示的文本文件；
+* 哈希函数：
+	* MD5摘要算法：
+	对相同的数据进行加密，得到的结果是一样的；对不同的数据进行加密，得到的都是32位的定长字符串；其结果是不可逆的，也就是只能加密，不能解密；
+	但是现在的MD5已不再安全，可以被暴力破解。所以可以使用“加盐”的方案来增加解密的难度。比如，在明文里插入随机串，再进行MD5；也可以对明文进行乱序或多次MD5等。
+* 对称加密算法：
+	* DES：数据加密标准
+	* AES：高级加密标准
+	对称加密的特点就是加密/解密使用相同的密钥；加密和解密的过程是可逆的；加密的过程是先加密再base64编码，解密的过程是先base64解码再解密。
+* 非对称加密算法：
+	* RSA：
+	非对称加密的特点：使用公钥加密，使用私钥解密，或者使用私钥加密，使用公钥解密；公钥是公开的，私钥是保密的。加密安全，但是性能消耗较大。
+* HTTPS：HTTP+SSL：略
+总结：
+对称加密：甲方使用某一个密钥对信息进行加密，乙方也使用同一套密钥对信息进行加密。但是密钥的保存和传递就成了最头疼的问题；
+非对称加密：乙方生成两把密钥(公钥和私钥)。公钥是公开的，任何人都可以获取，私钥是保密的。甲方获取乙方公钥，然后用它对信息进行加密。乙方得到加密后的信息，使用私钥进行解密。甲方获取到乙方的信息后也可以直接用公钥去解密私钥加密的数据。
+
+#### 通常的做法：
+* 1、使用Base64防止数据明文传输；
+* 2、对普通请求可以使用MD5进行数据完整性校验；
+* 3、对于重要的数据，使用RSA进行数字签名；
+* 4、对于敏感的数据，客户端使用RSA加密，服务器返回DES(AES)加密；
+* 5、想要安全的数据传输，使用HTTPS。但是最好加上双向验证防止中间人攻击；
+
+[ios常用加密手法](https://juejin.im/post/5d9f41f16fb9a04e1e7bb17b)
+
+
+### 动画
+
+
+
+
 ### 设计模式
 
 
 
-### 加解密
-https://juejin.im/entry/58b93af3ac502e006c0820c9
-
-
-
 ### 编译连接
-#### 静态库 && 动态库
-#### clang && LLVM
-#### mach-O
-#### 启动优化
+#### 编译型和解释型语言的区别：
+* 编译型语言：先将代码经过编译器先编译成机器代码，然后再执行。所以每次修改完代码都得先编译，才能执行结果。优点就是**代码执行效率高**，缺点就是**编写调试周期长**。我们也称这种执行方式为“**AOT预先编译**”
+* 解析型语言：不需要经过编译。执行的时候，通过一个解释器将代码解释成cpu可以执行的代码（实际上就相当于一边编译一边执行）。优点是**编写调试方便**，缺点是**执行效率不够高**。我们也称这种方式为“**JIT即时编译**”
+
+#### OC的编译连接过程
+OC和swift都是编译型语言。通过LLVM将代码转成机器码，主要的流程包括：
+##### 1、**预编译**：主要是处理源代码中以“#”开头的预编译指令：
+```
+clang -E xx.m -o xx.i
+```
+* “#define”删除并展开对应宏定义；
+* 处理所有预编译指令：#if、#ifdef、#else、#endif；
+* "#include、#import"包含的文件递归插入此处；
+* 删除所有注释；
+* 添加行号和文件名标识；
+##### 2、**编译**：就是把预编译得到的.i文件进行：词法分析、语法分析、静态分析、优化生成相应的汇编代码
+```
+clang -S xx.i -o xx.s
+```
+* 词法分析：顾名思义就是对每个词进行分析，把每一行代码分割成一个个token，主要是包括关键字、标识符变量名、字面量、特殊符号等。比如把变量名放到符号表等；
+* 语法分析：生成抽象语法树AST。比如运算符优先级、括号匹配等；
+* 静态分析：主要类型声明与匹配的问题。比如整形与字符串相加肯定会报错；
+* 中间语言生成：这里是指根据AST自顶向下生成LLVM的IR语言（它是区别与源码和机器码的一种中间代码）
+* 目标代码生成：根据IR生成依赖具体机器的汇编语言（Mach-O文件）。
+##### 3、**汇编**：把上面得到的.s文件里的汇编指令翻译成机器指令
+```
+clang -C xx.s -o xx.o
+```
+##### 4、**链接**：把目标文件（一个或多个）和需要的库（静态库、动态库）链接成可执行文件Mach-O
+```
+clang xx.o -o xx
+```
+
+#### Clang 和 LLVM
+* LLVM是一个模块化可重用的编译器和工具链技术的集合。
+LLVM IR 是一种“中间描述”。它是整个编译过程中有别于源码和机器码的中间代码。因此它是LLVM进行优化和代码生成的关键。LLVM的核心功能就是围绕IR建立的。
+所以整个LLVM的编译架构就是：前端——>IR——>后端;所以这也让LLVM的扩展性做的非常好，如果需要支持一种新的编程语言，则只需要实现一种新的前端即可，如果要支持一种新的设备，则只需实现一个新的后端就好。
+* Clang是LLVM的子项目，是C、C++、OC的前端编译器。
+主要负责的工作就是上诉的编译流程：
+预处理——词法分析——语法分析——静态分析——生成LLVM IR；
+
+* OC采用Clang作为编译器前端，Swift采用Swift作为编译器前端，
+swift编译器则是先生成一种SIL的中间代码，然后由SIL生成IR。
+
+[LLVM and Clang](https://www.jianshu.com/p/037fb5002b77)
+#### MachO文件
+MachO文件是iOS和OS X操作系统的可执行文件格式。
+因为不同的CPU平台支持的指令集不一样，所以通常不同的CPU对应不同格式的MachO文件，比如arm64和x86。**通用二进制文件**则是指多种架构下的Mach-O文件"打包"在一起。
+通用二进制文件常用命令：
+```
+//查看通用二进制文件中的MachO文件信息
+$ file bq 
+$ otool -f -V bq
+
+//lipo命令增、删、提取指定的MachO文件
+//提取
+$ lipo bq -extract armv7 -o bq_v7
+//删除
+$ lipo bq -remove armv7 -o bq_V7
+//瘦身
+$ lipo bq -thin armv7 -o bq_V7
+```
+MachO文件里主要就是代码和数据（全局变量）。而代码段和数据段是存在不一样的内存地址的，所以这个就需要**链接器**将其关联起来。
+
+#### 静态库与动态库
+* 静态库：以.a和.framework为后缀；链接是会被完整复制到可执行文件中，被多次使用就有多份拷贝；
+* 动态库：以.tbd和.framework为后缀；链接时不复制，而是由运行时动态加载到内存，系统只加载一次，多个程序共用，比如UIKit.framework;
 
 
 ### WebView 及 前端 学习
