--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -1007,8 +1007,64 @@ for column in result {
 
 [ios常用加密手法](https://juejin.im/post/5d9f41f16fb9a04e1e7bb17b)
 
-
 ### 动画
+动画就是由一帧帧画面组成的。
+基于iOS系统的屏幕刷新率是60FPS，也就是每秒60帧画面，每一帧相当于16.7ms。
+动画的本质就是在一段时间间隔内，对象的位置、形状、透明度等属性随着时间变化的过程。
+而负责动画操作的则是CALayer，CALayer的作用主要是为了内容展示和动画操作。
+#### 逐帧 和 关键帧
+iOS的动画主要分为两大类：逐帧动画 和 关键帧动画：
+##### 逐帧动画：就是讲过程中的每一帧画面进行绘制
+实现方式就是周期性地调用绘制方法，绘制每帧的动画对象。这里的周期性使用的是CADisplayerLink，即屏幕每次刷新都进行调用。
+##### 关键帧动画：理论上就是提供关键节点，比如起始点、中间点、终点等关键位置，其他的过度位置就交由计算机自动生成。
+一般我们提供起始帧、结束帧、动画时间、匀速运动；起始帧和结束帧是我们设定的，其他的过渡帧是系统生成的。CALayer的同一个属性值，会分别保存在模型层和展示层。当我修改一个属性值时，修改的是模型层的数值，动画时系统根据模型层的变化生成过渡值，将其保存在展现层中。执行的过程：
+* 1、动画前，显示模型层的当前值；
+* 2、动画开始，切换显示展示层的值；
+* 3、动画过程中，展示层的值会随着时间变化，我们看到的实际是展示层的值在变化；
+* 4、动画结束时，切换回显示模型层的值。此时的模型层的值也被修改为动画结束时展示层的值。
+代码实现：
+```
+UIView *view = [[UIView alloc] initWithFrame:CGRectMake(0, 0, 100, 100)];
+    view.backgroundColor = [UIColor redColor];
+    [self.view addSubview:view];
+
+    CABasicAnimation *animation = [CABasicAnimation animationWithKeyPath:@"position"];
+    animation.fromValue = [NSValue valueWithCGPoint:CGPointMake(50, 0)];
+    animation.toValue = [NSValue valueWithCGPoint:CGPointMake(150, 0)];
+    [view.layer addAnimation:animation forKey:nil];
+
+//    view.frame = CGRectOffset(view.frame, 100, 0);
+```
+解析：
+这里注释了最后一步，也就是动画结束的设置，所以动画结束后又回到了原来的位置。
+
+#### 隐式动画
+**我们显式地给CALayer添加动画的方式叫做显示动画，比如上面的逐帧和关键帧动画。而如果我们改变CALayer的一个可动画属性值时，就会触发系统的隐式动画**
+比如，我们修改CALayer的frame。只是UIView对应的CALayer，系统关闭了隐式动画，所以修改UIView的CALayer的相关属性时，变化是直接生效的，没有动画效果。
+所以如果我们做逐帧动画时给一个单独自建的CALayer变换frame，那么也会触发系统的隐式动画，这个时候就需要我们手动关闭隐式动画。
+
+UIView的一系列animationWithDuration等动画方法。在这些方法中UIView的CALayer都会恢复隐式动画，所以在block中修改属性时，会触发隐式动画。
+
+#### 相关类
+* CAAnimation : 核心动画基础类，不能直接使用；
+* CAPropertyAnimation : 属性动画的基类（通过属性进行动画设置，注意是可动画属性），不能直接使用;
+* CAAnimationGroup : 动画组，动画组是一种组合模式设计，可以通过动画组来进行所有动画行为的统一控制，组中所有动画效果可以并发执行;
+* CATransition : 转场动画，主要通过滤镜进行动画效果设置;
+* CABasicAnimation : 基础动画，通过属性修改进行动画参数控制，只有初始状态和结束状态;
+* CAKeyframeAnimation : 关键帧动画，同样是通过属性进行动画参数控制，但是同基础动画不同的是它可以有多个状态控制;
+
+基础动画、关键帧动画都属于属性动画，就是通过修改属性值产生动画效果，开发人员只需要设置初始值和结束值，中间的过程动画（又叫“补间动画”）由系统自动计算产生。和基础动画不同的是关键帧动画可以设置多个属性值，每两个属性中间的补间动画由系统自动完成，因此从这个角度而言基础动画又可以看成是有两个关键帧的关键帧动画;
+隐式属性动画的本质是这些属性的变动默认隐含了CABasicAnimation动画实现;
+
+
+#### 总结：
+* 关键帧动画的实现，只需要修改某个属性值就可以；
+* 逐帧动画则绘制过程复杂、开销较大；
+* 我们平时开发中使用UIView的隐式动画更多一些；
+
+
+[动画1](<https://www.jianshu.com/p/13c231b76594>)
+[动画2](https://www.cnblogs.com/iOS-mt/p/4194575.html)
 
 
 
