优化数据库相关

--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -715,7 +715,7 @@ GCD则有栅栏、group、信号量、单例、延时执行等。在暂停、取
 
 另外信号量和同步队列也能实现类似锁的操作！
 
-##### 死锁的几种情况
+#### 死锁的几种情况
 ```swift
 //1、串行队列：异步里同步嵌套
 SerialQueue.async{
@@ -743,6 +743,11 @@ let operaB = Operation()
 operaA.addDependency(operaB)
 operaB.addDependency(operaA)
 ```
+产生死锁的四个必要条件：
+* 互斥条件：进程所分配的资源不允许其他进程访问。若其他进程访问，只能等待；
+* 请求和保持条件：进程获得一定资源后，又对其他资源发出请求，但是其他资源可能被其他进程占有，此时请求阻塞，但又对自己获得的资源保持不放；
+* 不可剥夺条件：进程已获得的资源，在未完成使用之前，不可被剥夺，只能在使用完自己释放；
+* 环路等待条件：指进程若发生死锁，必然存在一个“进程——资源”之间的环形链
 
 #### 高效使用多线程
 * 减少队列切换
@@ -934,10 +939,25 @@ SELECTF sql FROM sqlite_master WHERE type="table" AND name="查询的表名"
 ```
 PRAGMA table_info([查询的表名])
 ```
+* 插入数据
+```
+INSERT INTO User(uid, uname, mobile)
+```
+* 更新数据
+```
+UPDATE 
+```
+* 删除数据
+* 
 Demo
 ```
 //获取数据库实例
 let db = SQLiteDB.sharedInstance
+
+//打开数据库
+        _ = db.openDB()
+//如果表还不存在则创建表（其中uid为自增主键）
+let result = db.execute(sql: "create table if not exists t_user(uid integer primary key,uname varchar(20),mobile varchar(20))")
 
 //查询表
 let result = db.query(sql: "SELECT count(*) FROM sqlite_master WHERE type=\"table\" AND name = \"t_user\"")
@@ -964,8 +984,33 @@ print("---共\(result.count)列---")
 for column in result {
     print(column["name"]!)
 }
+
+//搜索
+let data = db.query(sql: "select * from t_user")
+if data.count > 0 {
+	//获取最后一行数据显示
+	let user = data[data.count - 1]
+	txtUname.text = user["uname"] as? String
+	txtMobile.text = user["mobile"] as? String
+}
+
+//插入数据库，这里用到了esc字符编码函数，其实是调用bridge.m实现的
+let sql = "insert into t_user(uname,mobile) values('\(uname)','\(mobile)')"
+print("sql: \(sql)")
+//通过封装的方法执行sql
+let result = db.execute(sql: sql)
+print(result)
+
 ```
 
+#### 事务
+事务是指一个操作序列，这些操作要么执行，要么不执行。比如说转账：从一个账号里扣款，使另一账号增款。这两个操作要么执行，要么不执行。
+事务是数据库维护数据一致性的单位，每个事务结束时，都能保持数据一致性。
+事务的基本特征：
+* 原子性：指事务中的所有操作，要么全部成功，要么全部失败；
+* 一致性：只有合法的数据可以被写入数据库，否则事务应该将其回滚到最初状态；
+* 隔离性：事务允许多个用户对同一个数据进行并发访问，而不破坏数据的正确性和完整性。同时，并行事务的修改必须与其他并行事务的修改相互独立；
+* 持久性：事务结束后，事务处理的结果必须能够得到固化；
 #### Realm学习：
 #### FMDB学习:
 
