添加设计模式相关知识点

--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -1112,12 +1112,6 @@ UIView的一系列animationWithDuration等动画方法。在这些方法中UIVie
 [动画2](https://www.cnblogs.com/iOS-mt/p/4194575.html)
 
 
-
-
-### 设计模式
-
-
-
 ### 编译连接
 #### 编译型和解释型语言的区别：
 * 编译型语言：先将代码经过编译器先编译成机器代码，然后再执行。所以每次修改完代码都得先编译，才能执行结果。优点就是**代码执行效率高**，缺点就是**编写调试周期长**。我们也称这种执行方式为“**AOT预先编译**”
@@ -1189,6 +1183,8 @@ MachO文件里主要就是代码和数据（全局变量）。而代码段和数
 
 
 ### WebView 及 前端 学习
+#### JSBridge
+https://juejin.im/post/5abca877f265da238155b6bc
 #### JavaScriptCore 
 
 <https://zhuanlan.zhihu.com/p/81634837>
@@ -1197,3 +1193,45 @@ MachO文件里主要就是代码和数据（全局变量）。而代码段和数
 
 <https://blog.csdn.net/HorkyChen/article/details/8888428>
 
+
+### 设计模式
+设计模式主要是 为了代码的可重用性，将某些功能的模块代码规范化，然后尽可能让他人容易理解。
+
+设计模式主要包含设计原则和设计模式。设计模式就是实现了设计原则，达到了代码复用和可维护性。设计模式又包含创建型模式、结构型模式、行为型模式。
+#### 设计原则
+* **单一职责原则**：一个类只承担一个职责。比如UIView和CALayer的职责分离；
+* **开闭原则**：对类、模块、函数尽可能扩展，而不是修改，如果要修改也尽量用继承或组合的方式来修改。比如category给元类添加方法；
+* **里氏替换原则**：是指子类可以在任意地方替换父类的实例，而不会导致错误。换句话说，子类尽可能不要复写父类的方法，而是扩展其他的方法；
+* **接口隔离原则**：是指定义接口时，尽量不要定义不必须使用的方法，比如说OC中定义protocol时，尽可能不要定义@optional的方法；其次定义的接口尽量细化，做到功能单一；整个接口方法也不宜过多，避免太臃肿；
+* **依赖倒置原则**：指高层模块不应该依赖低层模块，二者都应该依赖抽象；抽象不应该依赖细节，细节应该依赖抽象。比如，面向协议编程、泛型的使用；
+* **迪米特法则**：尽可能实现高内聚、低耦合；比如项目中路由的使用，MVVM中viewmodel的使用；
+* 组合/聚合复用原则：尽量使用合成/聚合，尽量不使用继承；
+#### 常用设计模式
+##### 创建型模式
+* 抽象工厂模式：
+* 建造者模式：
+* 工厂方法模式：
+* 原型模式：
+* 单例模式：
+##### 结构型模式
+* 适配器模式：
+* 桥接模式：
+* 组合模式：
+* 装饰模式：
+* 外观模式：
+* 享元模式：
+* 代理模式：
+##### 行为型模式
+* 责任链模式：
+* 命令模式：
+* 解析器模式：
+* 迭代器模式：
+* 中介者模式：
+* 备忘录模式：
+* 观察者模式：
+* 状态模式：
+* 策略模式：
+* 模板方法模式：
+* 访问者模式：
+
+https://www.jianshu.com/p/e5c69c7b8c00
