添加图片加载及优化相关知识点

--- a/读书笔记/iOS高级笔记/知识小集01.md
+++ b/读书笔记/iOS高级笔记/知识小集01.md
@@ -11,8 +11,9 @@ description: 总结项目开发中的常用的进阶知识点
 
 #### 函数式编程
 
-swift是解析型静态语言、OC是编译型动态语言；swift更注重安全性，是强类型语言；OC更注重灵活性；swift有函数式编程、面向对象、面向协议编程，OC只有面向对象编程；swift更注重值类型，OC更遵循指针和索引。
+swift、OC都是编译型动态语言，只是他们的编译方式不一样；swift更注重安全性，是强类型语言；OC更注重灵活性；swift有函数式编程、面向对象、面向协议编程，OC只有面向对象编程；swift更注重值类型，OC更遵循指针和索引。
 1、数据结构：
+
 * swift将String、Array、Dictionary设计成值类型，OC是引用类型。相较而言，1)、值类型更高效使用内存，它是在栈上操作，引用类型在堆上操作；2)、通过let和var来确认String、Array、Dictionary是可变还是不可变，让线程更加安全；3)、也让String可以遵循Collection这种协议，增加了灵活性
 * 初始化的差别：swift的初始化更加严格准确，swift必须保证所有非optional的成员变量都完成初始化，同时新增convenience(便利初始化方法，必须通过调用同一个类中的designed初始化方法来完成)和required（强制子类重写父类所修饰的初始化方法）初始化方法
 * swift的protocol协议更灵活，它可以对接口进行抽象，例如Sequence，配合extention、泛型、关联类型实现面向协议编程，同时它还可以用于值类型、如结构体和枚举
@@ -41,7 +42,7 @@ twoC.makeFood()
 //这里oneC和twoC实际上都是SeafoodChef类型，按照上述原则，这里会打印两个"cook seafood"。假如protocol中没有声明makeFood()，那么第一行打印的就会是"Make food"，因为没有声明的话，只会按照声明类型进行静态派发，也就是说oneC被声明成了Chef类型，所以oneC会调用扩展中的实现。
 ```
 Q1、类和结构体的区别：
-类是引用类型，结构体是值类型。类可以继承、运行时类型转换、用deinit释放资源、可以被多次引用；Struts结构小，适用于复制操作，相较引用更安全，无须担心内存泄漏和多线程冲突问题。
+类是引用类型，结构体是值类型。类可以继承、运行时类型转换、用deinit释放资源、可以被多次引用；Struct结构小，适用于复制操作，相较引用更安全，无须担心内存泄漏和多线程冲突问题。
 Q2、weak和unowned的区别weak和unowned的区别QQ2：
 当访问对象可能已经被释放时，使用weak，例如delegate；当访问对象确认不可能被释放时，则用unowned，比如self的引用；实际上，为了安全，基本上都是使用weak。
 Q3、如何理解copy-on-write:
@@ -96,16 +97,84 @@ AFURLSessionManager主要工作包括哪些？
 
 [AFNetWork图片解码相关]<https://www.jianshu.com/p/90558187932f>
 
-### 图片相关与SDWebImage
+### 图片与SDWebImage
 #### 图片 内存、解码相关：
+##### 图片加载
+iOS 提供了UIImage用来加载图片，提供了UIImageView用来显示图片；
+* imageNamed：可以缓存已经加载的图片。使用时会根据文件名在系统缓存中寻找图片，如果找到了就返回，如果没有找到就在Bundle内查找文件名，找到后将文件名放到UIImage里返回，**并没有进行实际的文件读取和解码**。当UIImage第一次显示到屏幕上时，起内部解码方法才会被调用，同时解码结果会保存到一个全局的缓存中。这个全局缓存会在APP第一次退到后台和收到内存警告时才会被清空。
+* imageWithContentsOfFile：方法则是直接返回图片，不会进行缓存。但是其解码依然要等到第一次显示改图片的时候；
+
+##### 解码
+在UI的显示原理中，CALayer负责显示和动画操作相关内容，其中CALayer的属性contents是对应一张CGImageRef的位图。**位图**实际上就是一个像素数组，数组中的每个像素就代码图片中的一个点。**Image Buffer**就是内存中用来存储位图像素数据的区域；
+而项目中无论是网络下载还是本地的图片，基本都是JPEG、PNG等类型格式的压缩图片。 其中png是图片无损压缩格式，支持alpha通道。JPEG是图片有损压缩格式，可以指定0~100%的压缩比。所以如果要设置图片alpha，就只能用png格式。而jpeg则更小，但是也就损失了图片质量；**Data Buffer**就是用来存储JPEG、PNG格式图片的元数据，对应着源图片在磁盘中的大小；
+**解码就是将将不同格式的图片转码成图片的原始像素数据，然后绘制到屏幕上**。
+
+UIImage就负责解压Data Buffer内容并申请Image Buffer存储解压后的图片信息；
+UIImageView就负责将Image Buffer拷贝至frame Buffer(帧缓存区)，用于屏幕上显示；
+
+```
+ImageBuffer按照每个像素RGBA四个字节大小，一张1080p的图片解码后的位图大小是1920 * 1080 * 4 / 1024 / 1024，约7.9mb，而原图假设是jpg，压缩比1比20，大约350kb，可见解码后的内存占用是相当大的。
+```
+
+#### 图片相关优化
+##### 降低采样率(DownSampling)
+在视图比较小，但是图片缺较大的场景下，直接显示原图会造成不必要的内存和CPU消耗。这里就可以使用ImageIO的接口，DownSampling，也就是生成缩略图
+```
+	// 获取缩略图
+    func downSample(imageAt url:URL, to size:CGSize, scale:CGFloat) -> UIImage {
+        //避免缓存解码后的数据，因为这个是缩略图，之后的使用场景可能就不一样，所以不要做缓存。
+        let imageSourceOptions = [kCGImageSourceShouldCache : false] as CFDictionary
+        let imgSource = CGImageSourceCreateWithURL(url as CFURL,imageSourceOptions)!
+        
+        let maxDimendionInPixels = max(size.width,size.height) * scale
+        //kCGImageSourceShouldCacheImmediately设为YES，则就立马解码，而不是等到渲染的时候才解码
+        let downsampleOptions = [kCGImageSourceCreateThumbnailFromImageAlways : true,
+                                 kCGImageSourceShouldCacheImmediately : true,
+                                 kCGImageSourceCreateThumbnailWithTransform : true,
+                                 kCGImageSourceThumbnailMaxPixelSize : maxDimendionInPixels] as CFDictionary
+        let downsampledImage = CGImageSourceCreateThumbnailAtIndex(imgSource,0,downsampleOptions)!
+        return UIImage(cgImage:downsampledImage)
+    }
+```
+
+##### 将解码过程放到异步线程
+解码放在主线程一定会造成阻塞，所以应该放到异步线程。
+iOS 10之后，UITableView和CollectionView都提供了一个预加载的接口:tableView( _ : prefetchRowsAt:) 提前为cell加载数据。
+
+```
+	let serailQueue = DispatchQueue(label: "decode queue")
+    func tableView(_ tableView: UITableView, prefetchRowsAt indexPaths: [IndexPath]) {
+        for index in indexPaths {
+            serailQueue.async {
+                let downSampledImg = "" //解码操作
+                DispatchQueue.main.async {
+                    self.update(at:index,with:downSampledImg)
+                }
+            }
+        }
+    }
+    //这里使用串行队列，避免开启多个线程，因为线程消耗也是很大的
+```
+##### 平时UI代码注意的细节点
+* 重写drawRect:UIView是通过CALayer创建FrameBuffer最后显示的。重写了drawRect，CALayer会创建一个backing store，然后在backing store中执行draw函数。而backing store默认大小与UIView大小成正比的。存在的问题：backing store的创建造成不必要的内存开销；UIImage的话先绘制到Backing store，再渲染到frameBuffer，中间多了一层内存拷贝；
+* 更多使用Image Assets：更快地查找图片、运行时对内存管理也有优化；
+* 使用离屏渲染的场景推荐使用UIGraphicsImageRender替代UIGraphicsBeginIMageContext，性能更高，并且支持广色域。
+* 对于图片的实时处理，比如灰色值，这种最好推荐使用CoreImage框架，而不是使用CoreGraphics修改灰度值。因为CoreGraphics是由CPU进行处理，所以使用CoreImage交由GPU去做；
+
+#### 正确的图片加载方式
+类似SDWebImage流程
+##### 下载图片主要流程：
+* 1、从网络下载图片源数据，默认放入内存和磁盘缓存中；
+* 2、异步解码，解码后的数据放入内存缓存中；
+* 3、回调主线程渲染图片；
+* 4、内部维护磁盘和内存的cache，支持设置定时过期清理，设置内存cache的上限等
 
 
 https://juejin.im/post/5c84bd676fb9a049e702ecd8
 
-
-<https://juejin.im/post/5c84bd676fb9a049e702ecd8>
-
 <https://hnxczk.github.io/blog/articles/image_decode.html#imagewithcontentsoffile>
+
+
 
 
 
@@ -153,6 +222,8 @@ https://juejin.im/post/5da1a30de51d457825210a8c
 
 
 <https://zhuanlan.zhihu.com/p/38284322>
+
+<https://juejin.im/post/5d3ee3e7e51d4561e53538a1#heading-22>
 
 
 
