开始完成图像优化相关

--- a/读书笔记/iOS高级笔记/知识小集01.md
+++ b/读书笔记/iOS高级笔记/知识小集01.md
@@ -168,14 +168,20 @@ iOS 10之后，UITableView和CollectionView都提供了一个预加载的接口:
 * 2、异步解码，解码后的数据放入内存缓存中；
 * 3、回调主线程渲染图片；
 * 4、内部维护磁盘和内存的cache，支持设置定时过期清理，设置内存cache的上限等
+##### 加载图片流程简化：
+* 1、从内存中查找数据，如果有，并且已经解码，直接返回数据，如果没有解码，异步解码缓存内存后返回；
+* 2、内存中未查找到图片数据，从磁盘查找，磁盘查找到后，加载图片源数据到内存，异步解码缓存内存后返回，如果没有去网络下载图片，走上面的流程；
 
+总结：这个流程就主要避免了在主线程中解码图片的问题；然后通过缓存内存的方式，避免了频繁的磁盘IO；缓存解码后的图片数据，避开了频繁解码的CPU消耗；
+
+#### 超大图片处理
+如果是非常大的图，比如1902 * 1080，那解码之后的大小就达到了近7.9mb。像上述的图片加载方案或者SDWebImage的加载方式，默认就会自动解码缓存，那么如果有连续多张的情况，那内存将瞬间暴涨，甚至闪退。
+那解决方案就分为两个场景：
+* 如果显示的UIView较小，则应该通过上述降低采样率的方式，加载缩略图；
+* 如果是那种像微信、微博详情那样的大图，则应该全屏加载大图，通过拖动来查看不同位置图片的细节。技术细节就是使用苹果的CATiledLayer去加载，它可以分片渲染，滑动时通过映射原图指定位置的部分图片数据解码渲染。
 
 https://juejin.im/post/5c84bd676fb9a049e702ecd8
-
 <https://hnxczk.github.io/blog/articles/image_decode.html#imagewithcontentsoffile>
-
-
-
 
 
 #### SDWebImage：
