--- a/读书笔记/iOS高级笔记/知识小集01.md
+++ b/读书笔记/iOS高级笔记/知识小集01.md
@@ -196,12 +196,13 @@ https://juejin.im/post/5c84bd676fb9a049e702ecd8
 * 架构简述：
   SDWebImage是通过给UIImageView写的一个分类：UIImageView + WebCache；而支撑整个框架的核心类是SDWebImageManager。它通过管理SDWebImageDownloader和SDImageCache来协调异步下载和图片缓存。
 
-* 流程
+* 流程 基于4.3版本，5.0之后的版本改成了面向协议的方式，但是主要流程和类还是没什么大的改变的
 ```
 1、入口setImageWithURL:placeholderImage:options:会先把placeholderImage显示，然后SDWebImageManager根据URL开始处理图片;
 2、进入SDWebImageManager的loadImageWithURL:options:progress:completed:会先使用SDImageCache的queryCacheOperationForKey:options:done:从缓存查找图片;
 3、SDImageCache的queryCacheOperationForKey:options:done:会优先调用imageFromMemoryCacheForKey在缓存中进行图片查找，如果没有找到，则进行磁盘查找，然后将查找结果回调。
-4、
+4、如果没有在本地找到，则会根据需要判断是否下载图片。下载图片是使用SDWebImageDownloader的downloadImageWithURL:options:progress:completed:进行下载。
+5、下载完成后，将图片进行缓存，然后返回。
 ```
 
 <https://zhuanlan.zhihu.com/p/64934706>
@@ -209,12 +210,14 @@ https://zhuanlan.zhihu.com/p/64934706
 https://hnxczk.github.io/blog/articles/sd.html#sdwebimagecache
 
 ##### 注意的细节与常考点，与上述流程对应
-* 第1步中：
+* 第1步中：URL会进行MD5处理；
 * 第2步中：
-* 第3步中：首先会判断是否只使用了内存查找，如果是的话，则不进行磁盘查找，也不将查找的图片存到磁盘；否的话会先生成一个NSOperation赋值给SDWebImageCombinedOperation的cacheOperation，用于cancel。然后会封装一个block来执行磁盘查找，block根据设置来确实是同步还是异步查找，如果是异步查找的话，会放到一个串行的IO队列中。在查找期间会先判断Operation是否取消，如果已经取消则不进行查找。查找的过程中会创建一个@autoreleasePool来及时释放内存；
-
+* 第3步中：首先会判断是否只使用了内存查找，如果是的话，则不进行磁盘查找，也不将查找的图片存到磁盘；否的话会先生成一个NSOperation赋值给SDWebImageCombinedOperation的cacheOperation，用于cancel。然后会封装一个block来执行磁盘查找，block根据设置来确实是同步还是异步查找，如果是异步查找的话，会放到一个串行的IO队列中。在查找期间会先判断Operation是否取消，如果已经取消则不进行查找。查找的过程中会创建一个@autoreleasePool用来及时释放内存；如果在磁盘中找到了data，那么会将data解码成Image,并同时存一份到内存中，如果内存空间过小，则会先清一波内存缓存；
+* 第4步中：图片的下载是由SDWebImageDownloader单例执行，负责图片的异步下载， 操作在一个NSOperationQueue的并发队列里，队列中的最大并发量是6；使用信号量来确保downloadQueue的线程安全；使用字典来存储下载operation，以便cancel；然后设置超时,默认是15.0,
+* 第5步：
 * 其他：
-	* SDWebImageCombinedOperation：它实际上不是一个NSOperation，它只是持有了downloadOperation和cacheOperation（真实的NSOperation类型），downloadOpetation对应着SDWebImageDownloadToken类型，它包含着一个SDWebImageDownloaderOperation和url，也就是URLSession的实际下载操作；
+  * SDWebImageCombinedOperation：它实际上不是一个NSOperation，它只是持有了downloadOperation和cacheOperation（真实的NSOperation类型），downloadOpetation对应着SDWebImageDownloadToken类型，它包含着一个SDWebImageDownloaderOperation和url，也就是URLSession的实际下载操作；
+  * NSCache：内存缓存使用的是NSCache的子类。NSCache是类似NDDictionary的容器，它是线程安全的，所以在任意线程进行添加、删除都不需要加锁；
 
 
 
