基本完成SDWebImage的源码及细节整理

--- a/读书笔记/iOS高级笔记/知识小集01.md
+++ b/读书笔记/iOS高级笔记/知识小集01.md
@@ -199,10 +199,10 @@ https://juejin.im/post/5c84bd676fb9a049e702ecd8
 * 流程 基于4.3版本，5.0之后的版本改成了面向协议的方式，但是主要流程和类还是没什么大的改变的
 ```
 1、入口setImageWithURL:placeholderImage:options:会先把placeholderImage显示，然后SDWebImageManager根据URL开始处理图片;
-2、进入SDWebImageManager的loadImageWithURL:options:progress:completed:会先使用SDImageCache的queryCacheOperationForKey:options:done:从缓存查找图片;
-3、SDImageCache的queryCacheOperationForKey:options:done:会优先调用imageFromMemoryCacheForKey在缓存中进行图片查找，如果没有找到，则进行磁盘查找，然后将查找结果回调。
+2、进入SDWebImageManager会先使用SDImageCache的queryCacheOperationForKey:options:done:从缓存查找图片是否已经下载，如果内存中已经有图片，则回调返回展示;
+3、如果没有找到，则会生成一个Operation进行磁盘查找，然后将查找结果回调。
 4、如果没有在本地找到，则会根据需要判断是否下载图片。下载图片是使用SDWebImageDownloader的downloadImageWithURL:options:progress:completed:进行下载。
-5、下载完成后，将图片进行缓存，然后返回。
+5、下载完成后，将下载的结果进行解码处理，然后返回。同时将图片保存到内存和磁盘。
 ```
 
 <https://zhuanlan.zhihu.com/p/64934706>
@@ -210,14 +210,18 @@ https://zhuanlan.zhihu.com/p/64934706
 https://hnxczk.github.io/blog/articles/sd.html#sdwebimagecache
 
 ##### 注意的细节与常考点，与上述流程对应
-* 第1步中：URL会进行MD5处理；
+* 第1步中：整个库中的key值大多使用URL，比如缓存、下载操作等。URL会进行MD5处理；
 * 第2步中：
 * 第3步中：首先会判断是否只使用了内存查找，如果是的话，则不进行磁盘查找，也不将查找的图片存到磁盘；否的话会先生成一个NSOperation赋值给SDWebImageCombinedOperation的cacheOperation，用于cancel。然后会封装一个block来执行磁盘查找，block根据设置来确实是同步还是异步查找，如果是异步查找的话，会放到一个串行的IO队列中。在查找期间会先判断Operation是否取消，如果已经取消则不进行查找。查找的过程中会创建一个@autoreleasePool用来及时释放内存；如果在磁盘中找到了data，那么会将data解码成Image,并同时存一份到内存中，如果内存空间过小，则会先清一波内存缓存；
-* 第4步中：图片的下载是由SDWebImageDownloader单例执行，负责图片的异步下载， 操作在一个NSOperationQueue的并发队列里，队列中的最大并发量是6；使用信号量来确保downloadQueue的线程安全；使用字典来存储下载operation，以便cancel；然后设置超时,默认是15.0,
-* 第5步：
+* 第4步中：每张图片的下载是由自定义的NSOperation的子类进行的，它实现了start方法。然后在start方法中创建NSURLSession开启下载。每个Operation都会被缓存到一个字典中，以便cancel；同时被放到一个NSOperationQueue中并发执行，队列中的最大并发量是6；DownloadQueue使用了信号量来确保线程安全；
+* 第5步：下载完成后，会在URLSessionTaskDelegate的回调方法里使用一个串行队列异步进对下载图片进行解码。解压完成后，如果是JPEG这种可压缩格式的图片则会按照设置进行压缩后再返回。
 * 其他：
   * SDWebImageCombinedOperation：它实际上不是一个NSOperation，它只是持有了downloadOperation和cacheOperation（真实的NSOperation类型），downloadOpetation对应着SDWebImageDownloadToken类型，它包含着一个SDWebImageDownloaderOperation和url，也就是URLSession的实际下载操作；
-  * NSCache：内存缓存使用的是NSCache的子类。NSCache是类似NDDictionary的容器，它是线程安全的，所以在任意线程进行添加、删除都不需要加锁；
+  * 内存缓存使用的是NSCache的子类。NSCache是类似NDDictionary的容器，它是线程安全的，所以在任意线程进行添加、删除都不需要加锁，而且在内存紧张时会自动释放一些对象。SDImageCache在收到内存经过或退到后台的时候会清理内存缓存，应用结束时会清理过期图片；
+  * 磁盘缓存使用的是NSFileManager来实现的。图片存储的位置位于Cache文件夹，SDImageCache定义了一个串行队列来对图片进行异步写操作，不会对主线程造成影响；存到磁盘的同时会检查是jpeg还是png，然后将其转成对应的压缩格式进行存储，存储的文件名是对key值多MD5后的值；
+  * 清理磁盘缓存可以选择全部清空和部分清空。全部清空则是把缓存文件夹删除，部分清空会根据参数设置来判断，主要看文件缓存有效期和最大缓存空间，文件默认有效期是1周；文件默认缓存空间大小是0，也就是表示可以随意存储，如果设置了的话，则会先判断总大小是否已经超出最大值，如果超出了，则优先保留最近最先使用的图片，递归删掉其他过早的图片，直到总大小小于最大值。
+  * 使用主队列来代替是否在主线程的判断；
+  * 框架中使用最大的锁是dispatch_semaphore_t，其次是@synchronized互斥锁；
 
 
 
