--- a/读书笔记/iOS高级笔记/知识小集01.md
+++ b/读书笔记/iOS高级笔记/知识小集01.md
@@ -263,8 +263,96 @@ iOS 10之后，UITableView和CollectionView都提供了一个预加载的接口:
 
 
 
-### Crash 相关
-#### 检测
+### Crash 及 APP 性能监控相关
+面试常考题：介绍你碰到过的印象较深刻的外网crash，并介绍发现、定位、解决的过程。
+#### Crash
+##### 常见的Crash
+* 找不到方法：unrecognized selector sent to instance：
+	eg：比如说未实现的代理方法；对可变集合使用了copy后，对其进行修改操作。
+	解决方案：给NSObject写个分类，截获这种未实现的方法：
+	```
+	- (NSMethodSignature *)methodSignatureForSelector:(SEL)aSelector 	{
+		if ([self respondsToSelector:aSelector]) {
+		//已经实现不做处理
+			return [self methodSignatureForSelector:aSelector];
+    	}
+		return [NSMethodSignature signatureWithObjCTypes:"v@:"];
+	}
+	- (void)forwardInvocation:(NSInvocation *)anInvocation {
+		NSLog(@"在 %@ 类中, 调用了没有实现的实例方法: %@ ",NSStringFromClass([self class]),NSStringFromSelector(anInvocation.selector));
+	}
+	```
+	其次，尽量少使用performselector这种API；
+
+* KCV造成的Crash ：
+	eg:给NSObject添加KVC；key为nil；key不存在。一句话：**给不存在的key（包括nil）设置value**；
+	解决方案：重写类的setValue:forUndinedKey:和valueForUndefinedKey:
+	```
+	-(void)setValue:(id)value forUndefinedKey:(NSString *)key{
+		NSLog(@"在 %@ 类中给不存在的key设置value",NSStringFromClass([self class]));
+	}
+	-(id)valueForUndefinedKey:(NSString *)key{
+		return nil;
+	}
+	```
+* EXC_BAD_ACCESS:
+	eg:使用没有实现的block；对象未初始化；访问野指针(比如assign、unsafe_unretained修饰对象类型，关联属性修饰使用不对)；地址越界；
+	解决方案：这类对象大多数是由于操作不当导致的，所以可以利用xcode的一些工具
+	* 1、使用XCode，在Debug模式下开启僵尸模式，Release时关闭；
+	* 2、使用XCode的Address Sanitizer检查地址访问越界；
+	* 3、对象属性修改方式要使用正确；
+	* 4、使用block要先做判断；
+* KVO造成的Crash：
+	eg:观察者是局部变量；被观察者是局部变量；没有实现observeValueForKeyPath:；重复移除观察者；另外需要注意一个不会崩溃的现象：如果重复添加观察者，不会导致崩溃，但是一次改变会被观察多次；
+	解决方案：
+	* 1、尽可能合理使用；
+	* 2、add和remove一定要成对出现；
+* 集合类Crash：
+	eg:数组越界；向数组添加nil对象；在数组遍历时进行移除操作；字典使用setObject:forKey:时，key为nil；字典使用setObject:forKey:时，objct为nil;字典使用setValue:forKey:时，key为nil。这里要注意setValue和setObjct的区别：
+	```
+	 NSMutableDictionary * dic = [NSMutableDictionary dictionary];
+    [dic setObject:nil forKey:@"1"]; //crash
+    [dic setValue:nil forKey:@"1"]; // not crash
+    [dic setObject:@"1" forKey:nil]; //crash
+    [dic setValue:@"1" forKey:nil]; //crash
+	```
+	解决方案：
+	* 1、可以给集合类添加category，method swizzling原来方法，判断后再处理；
+	* 2、使用可变字典添加元素时，尽可能使用setValue:forKey:
+	* 3、NSMutableArray、NSMutableDictionary不是线程安全的，所以在多线程下要保证写操作的原子性。可以使用加锁、信号量、串行队列、dispatch_barrier_async等；或者使用NSCache代替；
+* 多线程Crash：
+	eg:子线程更新UI；Dispatch_Group中level比enter次数更多；Dispatch_semaphore使用时重新复制或置空；多线程下非线程安全的可变集合的使用；
+	解决方案：
+	* 1、使用集合时要确保操作的原子性；可以使用加锁、信号量、串行队列、dispatch_barrier_async等；或者使用NSCache代替；
+	* 2、熟练使用Dispatch_Group、Dispatch_semaphore等；
+	* 3、多线程发送Crash时，会收到SIGSEGV信号，表面视图访问未分配给自己的内存、或视图往没有写权限的地址写数据；
+* Socket造成的Crash：
+	原因：当服务器close一个连接时，若client端接着发数据。根据TCP协议的规定，会收到一个RST响应，client若再往这个服务器发送数据时，系统会发出一个SIGPIPE信号给进程，告诉进程这个连接已断开，不要再写数据了。而根据信号的默认处理规则，SIGPIPE信号的默认执行动作是terminate(终止、退出),所以client会退出。
+	eg：长连接socket或重定向管道进入后台，没有关闭导致崩溃的解决方法；
+	解决方案：
+	* 1、切换到后台是，关闭长连接和管道，回到前台重新创建；
+	* 2、使用signal(SIGPIPE,SIG_IGN)将SIGPIPE设置为SIG_IGN,相当于将SIGPIP交给系统处理，客户端不执行默认操作，即不退出。
+* Watch Dog超时造成的Crash：
+	原因：主线程执行耗时操作，导致主线程被卡超过一定时间。一般异常编码是0x8babf00d，表示应用发送超时而被iOS系统终止。
+	eg:长期卡顿导致崩溃；
+	解决方案：
+	尽可能将耗时操作异步放到后台线程。主线程只负责更新UI和事件响应。
+* 后台返回NSNull导致的崩溃：
+  eg:后台返回NSNull，解析完成后，使用时会crash；
+  ```
+  NSNull *nullStr = [[NSNull alloc] init];
+  NSMutableDictionary* dic = [NSMutableDictionary dictionary];
+  [dic setValue:nullStr forKey:@"key"]; //not crash
+  NSNumber* number = [dic valueForKey:@"key"];// crash 相当于调用了get方法，会报“unrecognized selector”
+  ```
+  解决方案：NSNull用于OC对象的占位，一般会作为集合类型的占位元素，给NSNull对象发送消息会crash。
+
+  * 可以使用NullSafe第三方库。
+#### 检测与捕获
+iOS的崩溃主要是由于Mach异常、OC异常引起的。对Mach异常，到了BSD层会转换成对应的Signal信号，所以可以通过捕获信号来捕获Mach crash事件。针对OC的NSException可以通过注册NSUncaughtExceptionHandler捕获异常信息。
+
+[iOS中常见Crash总结](https://juejin.im/post/5c617b85e51d45015e0475ac#heading-3)
+
 #### 优化
 
 #### 最佳实践
