完成直播相关知识点整理

--- a/读书笔记/iOS高级笔记/知识小集01.md
+++ b/读书笔记/iOS高级笔记/知识小集01.md
@@ -518,22 +518,50 @@ crash崩溃堆栈分析(略)
 https://juejin.im/post/5da1a30de51d457825210a8c
 
 ### 直播框架与实践
-主要是对业务层的搭建
+#### 移动端主要框架
+移动端直播框架就主要分为主播端和观看端。
+* 主播端：
+	* 音视频采集：AVFoundation；
+	* 视频处理(美颜、水印)：GPUImage；
+	* 音视频编码压缩：音频压缩FFmpeg，视频压缩：x264；
+	* 封装音视频后进行推流：libremp框架；
+* 观看端：
+	* 音视频解码：FFmpeg视频解码，VideoToolBox视频硬解码，AudioToolBox音频硬解码；
+	* 播放：ijkplayer；
+* IM聊天：聊天室、点亮、推送、超过、黑名单、聊天信息、滚动弹幕等；
+* 礼物相关：各种礼物、红包、排行榜等；
 
+#### 主要是对业务层的搭建
+直播端业务逻辑倒是不是特别复杂，大部分可以直接使用MVC框架即可。主控制器的独立业务太多的话，可以拆分成多个单独的Category；对于Model的数据变化可以采用notification的形式通知，便于做多处绑定；然后对于各种类型消息可以使用面向协议的方式编写；
+礼物：要使用队列存储礼物；
+消息：聊天消息要注意高度计算及卡顿相关问题，然后各种消息的分发也应该使用队列的形式；
+弹幕：也要用队列存储弹幕，同时要限制条数；
+聊天室：聊天室的各种消息类型比较多，尤其是频繁进出房间的时候。导致客户端与服务端之间的消息过多，可能就会产生一些性能问题，可以考虑在用户过多的情况下不发送进出房间消息，或者根据用户优先级来确定是否发送进出房的同步消息；
+
+#### 直播协议比较：
+* HLS：苹果退出的流媒体技术，是以点播的技术方式来实现直播，使用HTTP短链接。优势：兼容性、性能和、穿墙和HTTP一样；劣势：高延时、文件碎片；
+* RTMP：实时消息传送协议，TCP长连接，端口1935，有可能会被墙掉，低延时。
+HLS与RTMP对比: HLS主要是延时比较大，RTMP主要优势在于延时低HLS协议的小切片方式会生成大量的文件，存储或处理这些文件会造成大量资源浪费，相比使用RTSP协议的好处在于，一旦切分完成，之后的分发过程完全不需要额外使用任何专门软件，普通的网络服务器即可，大大降低了CDN边缘服务器的配置要求，可以使用任何现成的CDN,而一般服务器很少支持RTSP。
 
 #### 直播关键性能指标
-* 首开时间。以映客为例，在视频列表中随意点开某个视频，它的打开时间最好控制在 1 秒内。
-* 累计延迟。视频观看与事件实际发生时间相距不能超过 3 秒，最好控制在1 秒内。
-* 卡顿。在不同的码率和分辨率情况下，都能够做到让用户流畅地观看视频。
-* 高可用。节点和线路是足够冗余的，并且不会有太大浪费；当节点或者线路出现故障时，可以通过快速的切换来恢复，这样不影响终端用户的体验。
+* 直播为什么会卡顿？
+	* 关键词：**帧率**FPS和APP刷新帧率是一个概念，表示每秒显示的图片数，**码率**：图片进行压缩后每秒显示的数据量,码率主要用于推流和拉流，跟网速有关。
+	* 推流帧率太低：如果主播端手机性能较差，或者很占CPU的后台程序在运行，可能导致视频帧率太低。正常情况下FPS达到每秒15帧以上才能保证观看端的流畅度，如果FPS低于10帧，可以判定是**帧率太低**，则全部观众体验都会卡顿;
+	* 上传阻塞：主播端在推流时会源源不断产生音视频数据，如果手机上传网速太小，那么音视频数据就会堆积在手机里传不出去，导致全部观众体验卡顿；
+	* 下行不佳：观众端带宽不足，比如直播流的码率是2Mbps，也就是每秒2M数据要下载，下行带宽不够那么就会影响当前用户卡顿。
+	
+* 解决方案：
+	* 查看当前推流SDK的CPU的占用情况和当前系统的CPU占用情况；如果当前系统占用率超过80%，那么采集和编码都会受到影响。所以要找到直播之外的CPU消耗情况，进行优化；
+	*  不要盲目追求高分辨率：较高的视频分辨率如果没有较高的码率，则就无法带来好的体验，所以要根据网络情况选择分辨率。
+	*  有的SDK，如果发现APP的CPU使用率过高，则会切到硬编码来降低CPU的使用率，比如腾讯SDK。
+	*  上传阻塞的解决方案：使用更好的网络；使用合理的编码设置，比如低分辨率；
+	*  下行不加：卡顿延迟，因为由于网络不行，所以可能就拿不到足够的数据，所以可以考虑让APP缓存到足够的数据后再播放，不过这个会导致高延时，而且播放时间越久就越延时，HLS就是通过引入延时20~30秒来实现流畅的播放体验；腾讯SDK提供了多种延时控制方案：自动模式————会根据网络情况自动调节延迟大小；极速模式————高互动的秀场直播，就是在不卡顿的情况下，将延时调节到最低；流畅模式————适用于游戏直播，会在出现卡顿的时候loading知道缓冲区蓄满；
 
 重要[腾讯直播SDK](https://cloud.tencent.com/document/product/454/7946)
 
 [袁峥如何快速开发一个完整的iOS直播APP]https://www.jianshu.com/p/bd42bacbe4cc
 [研发直播APP的收获](https://www.jianshu.com/p/d99e83cab39a)
 [开发直播APP中要了解的原理](https://juejin.im/entry/58a6f725128fe100647cff29)
-
-
 
 ### 单元测试与可持续集成
 
