完成组件化、模块化知识点整理

--- a/读书笔记/iOS高级笔记/知识小集01.md
+++ b/读书笔记/iOS高级笔记/知识小集01.md
@@ -70,10 +70,13 @@ MVP是在MVC的基础上，将Controller职责分离开，只用它处理View的
 * 通用业务层：这个则是针对APP的一些基础模块，比如皮肤相关、接口请求通用处理及日志相关、APP中多个业务模块用到的一些通用组件等；它主要是给各个业务层提供一些通用的业务类代码，比如BT学院的Loading、日志、测试工具、缓存等；
 * 中间层：中间层的作用则是协议各个业务层的通信，同时让业务与业务之间解耦；比如BT学院的各个Router；
 * 业务层：则是各个单独的业务模块。比如BT学院的题库、问答、学习等；
+
 模块化的优势：各模块直接代码和资源相互独立，模块可以独立维护、测试等。实现简单的插拔式。
 其次模块化：主要是有两个方式：
 1、通过cocoapod的方案将各个主代码模块打包成pod包的形式。然后通过配置podsepc来进行模块以及库直接的依赖。但是会存在很大问题，一个主要 的是文件夹只有一层，没法做分级。2是库循环依赖问题。主流的方式还是使用pod的方式。
 2、使用cocoa touch framework。主要注意的点是混编时，对外的头文件，尤其是swift中使用到的OC头文件放到public中，因为framework不支持bridge；framework中的内核架构
+
+我们模块化的具体实施则是由develop pod的方式进行的。
 
 ##### 组件化
 组件可以分为基础组件、业务组件：
@@ -84,27 +87,27 @@ MVP是在MVC的基础上，将Controller职责分离开，只用它处理View的
 组件通信是中间层的主要内容，是为了解耦各个组件的。
 组件通信方案一般有三种：
 * URL Router：
+在前端，一个url表示一个web页面，在后端，一个url也表示一个接口请求；在iOS中，也会使用官方提供url去打开一个系统设置。所以同样的，我们可以使用url来表示一个控制器、一个组件、甚至一个控件；
+蘑菇街的MGJRoutre就是使用这种方案，它使用一个全局的router来管理对应的key和value，key是url，value是对应的对象。获取到对象后进行处理
+```
+注册路由
+[[Router sharedInstance] registerURL:@"myapp://good/detail" with:^UIViewController *{
+     return [GoodDetailViewController new];
+}];
+通过url获取
+UIViewController *vc = [[Router sharedInstance] openURL:@"myapp://good/detail"]
+```
+我们则是在MGJRouter的基础之上封装了一个BTRouter放在中间层，然后handler里使用根Root来执行跳转，只将结果block返回。然后每个业务模块对应一个Router分类， 尽可能解耦业务直接的联系。然后会根据本地url和远程url来进行参数的解析。 router的命名管理就显得尤其重要。
+
+缺点就是要在使用前进行注册和内存占用；
+
 * Target Action：
-* 面向接口编程：
-
-
-
-模块化的优势：各模块直接代码和资源相互独立，模块可以独立维护、测试等。实现简单的插拔式。
-文件夹隔离：将各模块的业务代码整理到相应的模块文件夹中，将各个模块用到的资源、宏也沉淀到基础库里。s
-路由化：首先我们通过MGJRouter实现简单的路由化，尽可能地解耦各个模块。它是通过注册组件，通过URL调用页面，通过路由表的映射关系进行关联。
-其次模块化：主要是有两个方式：
-1、通过cocoapod的方案将各个主代码模块打包成pod包的形式。然后通过配置podsepc来进行模块以及库直接的依赖。但是会存在很大问题，一个主要 的是文件夹只有一层，没法做分级。2是库循环依赖问题。
-2、使用cocoa touch framework。主要注意的点是混编时，对外的头文件，尤其是swift中使用到的OC头文件放到public中，因为framework不支持bridge；framework中的内核架构。
+这种方式则主要是利用iOS的反射机制，通过NSClassFromString来生成target类，然后再通过Runtime或者performSelector执行target的action，在action中进行目标类的实例化操作。利用这种机制，可以将任意类的实例化过程封装到任意一个target中，相比于URL Router，它无需注册和内存占用，缺点就是编译阶段是无法发现潜在的问题，对命名规则就更严格。
+这种方案的开源框架就是CTMediador。
 
 <https://juejin.im/post/5ccfd378e51d453b6c1d9cf5>
 [组件间通信](https://juejin.im/entry/5baaf45cf265da0afb334b25)
-
 [组件化及其通讯方案](https://juejin.im/entry/5baaf45cf265da0afb334b25)
-
-#####  CTMeditor 
-组件化方案的第三方库
-
-
 
 ### 图片与SDWebImage
 #### 图片 内存、解码相关：
